tf-a: Add missing dependency to host dtc
Build after clean all failed like this:

    /bin/sh: 1: dtc: not found
    dtc version too old (), you need at least version 1.4.4

A quick inspection of the tf-a source showed dtc is only needed for
stm32 when TF_A_EXTRA_ARGS is used, like it is done currently in
DistroKit, so a global dependency might be to broad. However dtc is
probably needed for arm targets anyway, so it should not hurt that
much?!

Signed-off-by: Alexander Dahl <post@lespocky.de>

--- a/rules/tf-a.in
+++ b/rules/tf-a.in
@@ -2,6 +2,7 @@
 
 menuconfig TF_A
 	select BOOTLOADER
+	select HOST_DTC
 	prompt "ARM Trusted Firmware-A        "
 	depends on ARCH_ARM || ARCH_ARM64
 	bool
