--- a/configs/platform-v7a/platforms/image-beaglebone.in
+++ b/configs/platform-v7a/platforms/image-beaglebone.in
@@ -6,7 +6,7 @@ config IMAGE_BEAGLEBONE
 	select HOST_DOSFSTOOLS
 	select HOST_MTOOLS
 	select IMAGE_ROOT_EXT
-	select BAREBOX_AM335X
+	select BAREBOX
 	select BAREBOX_AM335X_MLO
 	prompt "Generate images/beaglebone.hdimg"
 	help
