--- a/configs/platform-v7a_noneon/barebox-at91.config
+++ b/configs/platform-v7a_noneon/barebox-at91.config
@@ -1,11 +1,13 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Barebox/arm 2024.07.0 Configuration
+# Barebox/arm 2025.03.0 Configuration
 #
 CONFIG_ARM=y
+CONFIG_ARCH_LINUX_NAME="arm"
+CONFIG_ARCH_MKIMAGE_NAME="arm"
+CONFIG_ARM32=y
 CONFIG_ARCH_TEXT_BASE=0x00000000
 CONFIG_ARM_LINUX=y
-CONFIG_ARM_USE_COMPRESSED_DTB=y
 
 #
 # System Type
@@ -20,6 +22,7 @@ CONFIG_ARCH_AT91=y
 # CONFIG_ARCH_TEGRA is not set
 # CONFIG_ARCH_ZYNQ is not set
 # CONFIG_ARCH_BCM283X is not set
+# CONFIG_ARCH_K3 is not set
 # CONFIG_ARCH_STM32MP is not set
 # CONFIG_ARCH_VERSATILE is not set
 # CONFIG_ARCH_VEXPRESS is not set
@@ -66,7 +69,7 @@ CONFIG_MACH_MICROCHIP_SAMA5D3_EDS=y
 #
 # AT91 Board Options
 #
-# CONFIG_BOARD_ARM_GENERIC_DT is not set
+CONFIG_BOARD_ARM_GENERIC_DT=y
 CONFIG_AEABI=y
 # CONFIG_ARM_BOARD_APPEND_ATAG is not set
 # end of System Type
@@ -81,10 +84,21 @@ CONFIG_ARM_OPTIMZED_STRING_FUNCTIONS=y
 CONFIG_ARM_EXCEPTIONS=y
 CONFIG_ARM_UNWIND=y
 # CONFIG_ARM_SEMIHOSTING is not set
-# CONFIG_ARM_PSCI is not set
 # CONFIG_ARM_PSCI_CLIENT is not set
 # end of ARM specific settings
 
+CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
+
+#
+# General architecture-dependent options
+#
+CONFIG_BOARD_GENERIC_DT=y
+# CONFIG_BOARD_GENERIC_FIT is not set
+# end of General architecture-dependent options
+
+CONFIG_CC_IS_GCC=y
+CONFIG_GCC_VERSION=140201
+CONFIG_CLANG_VERSION=0
 CONFIG_GREGORIAN_CALENDER=y
 CONFIG_HAS_KALLSYMS=y
 CONFIG_HAS_MODULES=y
@@ -100,7 +114,6 @@ CONFIG_UIMAGE=y
 CONFIG_LOGBUF=y
 CONFIG_STDDEV=y
 CONFIG_UBIFORMAT=y
-CONFIG_USBGADGET_START=y
 CONFIG_BOOT=y
 CONFIG_FASTBOOT_BASE=y
 
@@ -109,6 +122,8 @@ CONFIG_FASTBOOT_BASE=y
 #
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
+CONFIG_HAS_INSECURE_DEFAULTS=y
+CONFIG_INSECURE=y
 CONFIG_BANNER=y
 CONFIG_MEMINFO=y
 CONFIG_ENVIRONMENT_VARIABLES=y
@@ -166,6 +181,7 @@ CONFIG_MENU=y
 CONFIG_ERRNO_MESSAGES=y
 CONFIG_TIMESTAMP=y
 CONFIG_BOOTM=y
+# CONFIG_BOOT_OVERRIDE is not set
 CONFIG_BOOTM_SHOW_TYPE=y
 # CONFIG_BOOTM_VERBOSE is not set
 CONFIG_BOOTM_INITRD=y
@@ -174,6 +190,7 @@ CONFIG_BOOTM_OFTREE=y
 # CONFIG_BOOTM_AIMAGE is not set
 # CONFIG_BOOTM_ELF is not set
 # CONFIG_BOOTM_FITIMAGE is not set
+CONFIG_BOOTM_OPTIONAL_SIGNED_IMAGES=y
 CONFIG_BLSPEC=y
 CONFIG_FLEXIBLE_BOOTARGS=y
 CONFIG_MMCBLKDEV_ROOTARG=y
@@ -185,7 +202,8 @@ CONFIG_CONSOLE_FULL=y
 # CONFIG_CONSOLE_NONE is not set
 # CONFIG_CONSOLE_ACTIVATE_FIRST is not set
 # CONFIG_CONSOLE_ACTIVATE_ALL is not set
-CONFIG_CONSOLE_ACTIVATE_NONE=y
+CONFIG_CONSOLE_ACTIVATE_ALL_FALLBACK=y
+# CONFIG_CONSOLE_ACTIVATE_NONE is not set
 CONFIG_CONSOLE_ALLOW_COLOR=y
 # CONFIG_CONSOLE_DISABLE_INPUT is not set
 CONFIG_PBL_CONSOLE=y
@@ -240,6 +258,7 @@ CONFIG_DEBUG_AT91_UART_BASE=0xffffee00
 # CONFIG_DEBUG_PROBES is not set
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_DEBUG_LIST is not set
+# CONFIG_DEBUG_RESOURCES is not set
 # CONFIG_PBL_BREAK is not set
 # CONFIG_PRINTF_FULL is not set
 # CONFIG_UBSAN is not set
@@ -248,6 +267,10 @@ CONFIG_CC_HAS_KASAN_GENERIC=y
 # CONFIG_KASAN is not set
 # CONFIG_COMPILE_TEST is not set
 # CONFIG_WERROR is not set
+
+#
+# arm Debugging
+#
 # end of Debugging
 
 #
@@ -269,6 +292,7 @@ CONFIG_COMPILE_HASH=y
 # CONFIG_CMD_TUTORIAL is not set
 CONFIG_CMD_AT91CLK=y
 CONFIG_CMD_ARM_CPUINFO=y
+# CONFIG_CMD_CLASS is not set
 CONFIG_CMD_DEVINFO=y
 # CONFIG_CMD_DEVLOOKUP is not set
 # CONFIG_CMD_DEVUNBIND is not set
@@ -280,6 +304,7 @@ CONFIG_CMD_IOMEM=y
 CONFIG_CMD_IMD=y
 CONFIG_CMD_MEMINFO=y
 # CONFIG_CMD_ARM_MMUINFO is not set
+# CONFIG_CMD_BLKSTATS is not set
 # CONFIG_CMD_REGULATOR is not set
 CONFIG_CMD_VERSION=y
 # CONFIG_CMD_MMC is not set
@@ -358,6 +383,7 @@ CONFIG_CMD_SHA1SUM=y
 # CONFIG_CMD_SHA256SUM is not set
 # CONFIG_CMD_SHA384SUM is not set
 # CONFIG_CMD_SHA512SUM is not set
+# CONFIG_CMD_FIPTOOL is not set
 CONFIG_CMD_UNCOMPRESS=y
 # end of File
 
@@ -421,6 +447,7 @@ CONFIG_CMD_MW=y
 #
 # CONFIG_CMD_CLK is not set
 CONFIG_CMD_DETECT=y
+# CONFIG_CMD_SYNC is not set
 CONFIG_CMD_FLASH=y
 CONFIG_CMD_GPIO=y
 # CONFIG_CMD_I2C is not set
@@ -454,6 +481,7 @@ CONFIG_CMD_OF_PROPERTY=y
 # CONFIG_CMD_OF_OVERLAY is not set
 CONFIG_CMD_OFTREE=y
 CONFIG_CMD_TIME=y
+# CONFIG_CMD_WATCH is not set
 # CONFIG_CMD_UPTIME is not set
 # CONFIG_CMD_DHRYSTONE is not set
 # CONFIG_CMD_SPD_DECODE is not set
@@ -487,12 +515,14 @@ CONFIG_OF_BAREBOX_DRIVERS=y
 CONFIG_OF_BAREBOX_ENV_IN_FS=y
 # CONFIG_OF_OVERLAY is not set
 # CONFIG_AIODEV is not set
+CONFIG_ARM_AMBA=y
 
 #
 # serial drivers
 #
 # CONFIG_SERIAL_DEV_BUS is not set
 # CONFIG_DRIVER_SERIAL_ARM_DCC is not set
+# CONFIG_SERIAL_AMBA_PL011 is not set
 # CONFIG_DRIVER_SERIAL_NS16550 is not set
 CONFIG_DRIVER_SERIAL_ATMEL=y
 # CONFIG_DRIVER_SERIAL_CADENCE is not set
@@ -598,7 +628,6 @@ CONFIG_MTD_OOB_DEVICE=y
 #
 # CONFIG_MTD_DATAFLASH is not set
 CONFIG_MTD_M25P80=y
-# CONFIG_MTD_SST25L is not set
 # CONFIG_MTD_DOCG3 is not set
 # CONFIG_MTD_MTDRAM is not set
 # end of Self contained MTD devices
@@ -701,6 +730,7 @@ CONFIG_MCI=y
 # CONFIG_MCI_STARTUP is not set
 CONFIG_MCI_INFO=y
 CONFIG_MCI_WRITE=y
+CONFIG_MCI_ERASE=y
 CONFIG_MCI_MMC_BOOT_PARTITIONS=y
 # CONFIG_MCI_MMC_GPP_PARTITIONS is not set
 
@@ -709,9 +739,11 @@ CONFIG_MCI_MMC_BOOT_PARTITIONS=y
 #
 # CONFIG_MCI_DWC_MSHC is not set
 # CONFIG_MCI_DW is not set
+# CONFIG_MCI_SUNXI_SMHC is not set
 # CONFIG_MCI_ROCKCHIP_DWCMSHC is not set
 CONFIG_MCI_ATMEL=y
 CONFIG_MCI_ATMEL_SDHCI=y
+# CONFIG_MCI_MMCI is not set
 # CONFIG_MCI_ARASAN is not set
 # CONFIG_MCI_AM654 is not set
 # CONFIG_MCI_SPI is not set
@@ -743,6 +775,7 @@ CONFIG_CLOCKSOURCE_ARM_ARCHITECTED_TIMER=y
 # CONFIG_MFD_MC9SDZ60 is not set
 # CONFIG_MFD_STMPE is not set
 CONFIG_MFD_SYSCON=y
+# CONFIG_MFD_TPS65219 is not set
 # CONFIG_MFD_TWL4030 is not set
 # CONFIG_MFD_TWL6030 is not set
 # CONFIG_MFD_STPMIC1 is not set
@@ -797,6 +830,7 @@ CONFIG_LED_TRIGGERS=y
 #
 # DMA support
 #
+# CONFIG_DMADEVICES is not set
 # end of DMA support
 
 CONFIG_GPIOLIB=y
@@ -809,6 +843,8 @@ CONFIG_GPIOLIB=y
 # CONFIG_GPIO_GENERIC_PLATFORM is not set
 # CONFIG_GPIO_PCA953X is not set
 # CONFIG_GPIO_PCF857X is not set
+# CONFIG_GPIO_PL061 is not set
+# CONFIG_GPIO_SAMA5D2_PIOBU is not set
 # CONFIG_GPIO_DESIGNWARE is not set
 # CONFIG_GPIO_SX150X is not set
 # CONFIG_GPIO_SIFIVE is not set
@@ -850,6 +886,7 @@ CONFIG_PINCTRL_AT91PIO4=y
 
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED=y
+# CONFIG_REGULATOR_FAN53555 is not set
 # CONFIG_REGULATOR_ANATOP is not set
 
 #
@@ -939,6 +976,7 @@ CONFIG_VIRTIO_MENU=y
 #
 CONFIG_FS=y
 CONFIG_FS_LEGACY=y
+CONFIG_FS_WRITABLE=y
 
 #
 # Some selected filesystems still use the legacy FS API.
@@ -1010,6 +1048,7 @@ CONFIG_QSORT=y
 CONFIG_LIBSCAN=y
 CONFIG_LIBUBIGEN=y
 CONFIG_IMAGE_SPARSE=y
+CONFIG_LIBFDT=y
 # CONFIG_RATP is not set
 # CONFIG_ALLOW_PRNG_FALLBACK is not set
 # CONFIG_CRC_CCITT is not set
@@ -1032,7 +1071,35 @@ CONFIG_GENERIC_ALLOCATOR=y
 #
 # Hardening options
 #
+
+#
+# This barebox configuration has CONFIG_HAS_INSECURE_DEFAULTS=y indicating
+#
+
+#
+# that some of the configured options have potentially insecure defaults.
+#
+
+#
+# Extra care needs to be in secure booted systems.
+#
 # CONFIG_BUG_ON_DATA_CORRUPTION is not set
+
+#
+# Memory initialization
+#
+CONFIG_CC_HAS_AUTO_VAR_INIT_PATTERN=y
+CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO_BARE=y
+CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO=y
+# CONFIG_INIT_STACK_NONE is not set
+# CONFIG_INIT_STACK_ALL_PATTERN is not set
+CONFIG_INIT_STACK_ALL_ZERO=y
+# CONFIG_INIT_ON_ALLOC_DEFAULT_ON is not set
+# CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
+CONFIG_CC_HAS_ZERO_CALL_USED_REGS=y
+# CONFIG_ZERO_CALL_USED_REGS is not set
+# end of Memory initialization
+
 CONFIG_STACK_GUARD_PAGE=y
 CONFIG_STACKPROTECTOR_NONE=y
 # CONFIG_STACKPROTECTOR_STRONG is not set
@@ -1057,6 +1124,9 @@ CONFIG_DIGEST_SHA1_GENERIC=y
 # CONFIG_DIGEST_HMAC_GENERIC is not set
 CONFIG_DIGEST_SHA1_ARM=y
 # CONFIG_DIGEST_SHA256_ARM is not set
+# CONFIG_CRYPTO_RSA is not set
+# CONFIG_CRYPTO_ECDSA is not set
+# CONFIG_CRYPTO_BUILTIN_KEYS is not set
 # CONFIG_CRYPTO_KEYSTORE is not set
 # end of Crypto support
 
