--- a/configs/platform-v7a_noneon/barebox.config
+++ b/configs/platform-v7a_noneon/barebox.config
@@ -1,11 +1,13 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Barebox/arm 2024.07.0 Configuration
+# Barebox/arm 2025.03.0 Configuration
 #
 CONFIG_ARM=y
+CONFIG_ARCH_LINUX_NAME="arm"
+CONFIG_ARCH_MKIMAGE_NAME="arm"
+CONFIG_ARM32=y
 CONFIG_ARCH_TEXT_BASE=0x00000000
 CONFIG_ARM_LINUX=y
-CONFIG_ARM_USE_COMPRESSED_DTB=y
 
 #
 # System Type
@@ -21,6 +23,8 @@ CONFIG_ARCH_MULTIARCH=y
 # CONFIG_ARCH_ZYNQ is not set
 CONFIG_ARCH_BCM283X=y
 # CONFIG_ARCH_IMX is not set
+# CONFIG_ARCH_K3 is not set
+# CONFIG_ARCH_SUNXI is not set
 # CONFIG_ARCH_LAYERSCAPE is not set
 # CONFIG_ARCH_OMAP_MULTI is not set
 # CONFIG_ARCH_ROCKCHIP is not set
@@ -70,10 +74,21 @@ CONFIG_ARM_UNWIND=y
 # CONFIG_ARM_SEMIHOSTING is not set
 CONFIG_ARM_SMCCC=y
 CONFIG_ARM_SECURE_MONITOR=y
-# CONFIG_ARM_PSCI is not set
 # CONFIG_ARM_PSCI_CLIENT is not set
 # end of ARM specific settings
 
+CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
+
+#
+# General architecture-dependent options
+#
+CONFIG_BOARD_GENERIC_DT=y
+# CONFIG_BOARD_GENERIC_FIT is not set
+# end of General architecture-dependent options
+
+CONFIG_CC_IS_GCC=y
+CONFIG_GCC_VERSION=140201
+CONFIG_CLANG_VERSION=0
 CONFIG_GREGORIAN_CALENDER=y
 CONFIG_HAS_KALLSYMS=y
 CONFIG_HAS_MODULES=y
@@ -89,7 +104,6 @@ CONFIG_UIMAGE=y
 CONFIG_LOGBUF=y
 CONFIG_STDDEV=y
 CONFIG_MENUTREE=y
-CONFIG_USBGADGET_START=y
 CONFIG_BOOT=y
 CONFIG_FASTBOOT_BASE=y
 
@@ -98,6 +112,8 @@ CONFIG_FASTBOOT_BASE=y
 #
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
+CONFIG_HAS_INSECURE_DEFAULTS=y
+CONFIG_INSECURE=y
 CONFIG_BANNER=y
 CONFIG_MEMINFO=y
 CONFIG_MEMTEST=y
@@ -115,7 +131,6 @@ CONFIG_PBL_IMAGE=y
 CONFIG_PBL_MULTI_IMAGES=y
 CONFIG_USE_COMPRESSED_DTB=y
 CONFIG_PBL_RELOCATABLE=y
-CONFIG_BOARD_GENERIC_DT=y
 CONFIG_IMAGE_COMPRESSION=y
 # CONFIG_IMAGE_COMPRESSION_LZ4 is not set
 CONFIG_IMAGE_COMPRESSION_LZO=y
@@ -159,6 +174,7 @@ CONFIG_MENU=y
 CONFIG_ERRNO_MESSAGES=y
 CONFIG_TIMESTAMP=y
 CONFIG_BOOTM=y
+# CONFIG_BOOT_OVERRIDE is not set
 CONFIG_BOOTM_SHOW_TYPE=y
 CONFIG_BOOTM_VERBOSE=y
 CONFIG_BOOTM_INITRD=y
@@ -167,6 +183,7 @@ CONFIG_BOOTM_OFTREE=y
 # CONFIG_BOOTM_AIMAGE is not set
 # CONFIG_BOOTM_ELF is not set
 # CONFIG_BOOTM_FITIMAGE is not set
+CONFIG_BOOTM_OPTIONAL_SIGNED_IMAGES=y
 CONFIG_BLSPEC=y
 CONFIG_FLEXIBLE_BOOTARGS=y
 CONFIG_MMCBLKDEV_ROOTARG=y
@@ -176,8 +193,9 @@ CONFIG_IMD=y
 CONFIG_CONSOLE_FULL=y
 # CONFIG_CONSOLE_SIMPLE is not set
 # CONFIG_CONSOLE_NONE is not set
-CONFIG_CONSOLE_ACTIVATE_FIRST=y
+# CONFIG_CONSOLE_ACTIVATE_FIRST is not set
 # CONFIG_CONSOLE_ACTIVATE_ALL is not set
+CONFIG_CONSOLE_ACTIVATE_ALL_FALLBACK=y
 # CONFIG_CONSOLE_ACTIVATE_NONE is not set
 CONFIG_CONSOLE_ALLOW_COLOR=y
 # CONFIG_CONSOLE_DISABLE_INPUT is not set
@@ -235,6 +253,7 @@ CONFIG_HAS_DEBUG_LL=y
 # CONFIG_DEBUG_PROBES is not set
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_DEBUG_LIST is not set
+# CONFIG_DEBUG_RESOURCES is not set
 # CONFIG_PBL_BREAK is not set
 # CONFIG_PRINTF_FULL is not set
 # CONFIG_UBSAN is not set
@@ -243,6 +262,10 @@ CONFIG_CC_HAS_KASAN_GENERIC=y
 # CONFIG_KASAN is not set
 # CONFIG_COMPILE_TEST is not set
 # CONFIG_WERROR is not set
+
+#
+# arm Debugging
+#
 # end of Debugging
 
 #
@@ -263,6 +286,7 @@ CONFIG_COMPILE_HASH=y
 #
 # CONFIG_CMD_TUTORIAL is not set
 CONFIG_CMD_ARM_CPUINFO=y
+# CONFIG_CMD_CLASS is not set
 CONFIG_CMD_DEVINFO=y
 # CONFIG_CMD_DEVLOOKUP is not set
 # CONFIG_CMD_DEVUNBIND is not set
@@ -274,6 +298,7 @@ CONFIG_CMD_IOMEM=y
 CONFIG_CMD_IMD=y
 CONFIG_CMD_MEMINFO=y
 CONFIG_CMD_ARM_MMUINFO=y
+# CONFIG_CMD_BLKSTATS is not set
 CONFIG_CMD_REGULATOR=y
 CONFIG_CMD_VERSION=y
 CONFIG_CMD_MMC=y
@@ -349,6 +374,7 @@ CONFIG_CMD_SHA1SUM=y
 # CONFIG_CMD_SHA256SUM is not set
 # CONFIG_CMD_SHA384SUM is not set
 # CONFIG_CMD_SHA512SUM is not set
+# CONFIG_CMD_FIPTOOL is not set
 CONFIG_CMD_UNCOMPRESS=y
 # end of File
 
@@ -413,6 +439,7 @@ CONFIG_CMD_MW=y
 #
 CONFIG_CMD_CLK=y
 CONFIG_CMD_DETECT=y
+# CONFIG_CMD_SYNC is not set
 CONFIG_CMD_FLASH=y
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_I2C=y
@@ -446,6 +473,7 @@ CONFIG_CMD_OF_FIXUP_STATUS=y
 CONFIG_CMD_OF_OVERLAY=y
 CONFIG_CMD_OFTREE=y
 CONFIG_CMD_TIME=y
+# CONFIG_CMD_WATCH is not set
 # CONFIG_CMD_UPTIME is not set
 CONFIG_CMD_STATE=y
 # CONFIG_CMD_DHRYSTONE is not set
@@ -551,6 +579,7 @@ CONFIG_SPI=y
 # CONFIG_SPI_MEM is not set
 CONFIG_DRIVER_SPI_GPIO=y
 # CONFIG_DRIVER_SPI_LITEX_SPIFLASH is not set
+# CONFIG_SPI_BCM2835 is not set
 # end of SPI drivers
 
 CONFIG_I2C=y
@@ -654,6 +683,7 @@ CONFIG_MCI=y
 CONFIG_MCI_STARTUP=y
 CONFIG_MCI_INFO=y
 CONFIG_MCI_WRITE=y
+CONFIG_MCI_ERASE=y
 # CONFIG_MCI_MMC_BOOT_PARTITIONS is not set
 # CONFIG_MCI_MMC_GPP_PARTITIONS is not set
 
@@ -662,6 +692,7 @@ CONFIG_MCI_WRITE=y
 #
 # CONFIG_MCI_DWC_MSHC is not set
 # CONFIG_MCI_DW is not set
+# CONFIG_MCI_SUNXI_SMHC is not set
 # CONFIG_MCI_ROCKCHIP_DWCMSHC is not set
 # CONFIG_MCI_BCM283X is not set
 # CONFIG_MCI_BCM283X_SDHOST is not set
@@ -696,6 +727,7 @@ CONFIG_CLOCKSOURCE_ARM_ARCHITECTED_TIMER=y
 # CONFIG_MFD_MC9SDZ60 is not set
 # CONFIG_MFD_STMPE is not set
 # CONFIG_MFD_SYSCON is not set
+# CONFIG_MFD_TPS65219 is not set
 # CONFIG_MFD_TWL4030 is not set
 # CONFIG_MFD_TWL6030 is not set
 # CONFIG_MFD_STPMIC1 is not set
@@ -758,6 +790,7 @@ CONFIG_HWRNG=y
 #
 # DMA support
 #
+# CONFIG_DMADEVICES is not set
 # end of DMA support
 
 CONFIG_GPIOLIB=y
@@ -798,6 +831,7 @@ CONFIG_PINCTRL=y
 CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_FIXED is not set
 CONFIG_REGULATOR_BCM283X=y
+# CONFIG_REGULATOR_FAN53555 is not set
 
 #
 # Remoteproc drivers
@@ -883,6 +917,7 @@ CONFIG_REGULATOR_BCM283X=y
 #
 CONFIG_FS=y
 CONFIG_FS_LEGACY=y
+CONFIG_FS_WRITABLE=y
 
 #
 # Some selected filesystems still use the legacy FS API.
@@ -974,7 +1009,35 @@ CONFIG_ARCH_HAS_ZERO_PAGE=y
 #
 # Hardening options
 #
+
+#
+# This barebox configuration has CONFIG_HAS_INSECURE_DEFAULTS=y indicating
+#
+
+#
+# that some of the configured options have potentially insecure defaults.
+#
+
+#
+# Extra care needs to be in secure booted systems.
+#
 # CONFIG_BUG_ON_DATA_CORRUPTION is not set
+
+#
+# Memory initialization
+#
+CONFIG_CC_HAS_AUTO_VAR_INIT_PATTERN=y
+CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO_BARE=y
+CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO=y
+# CONFIG_INIT_STACK_NONE is not set
+# CONFIG_INIT_STACK_ALL_PATTERN is not set
+CONFIG_INIT_STACK_ALL_ZERO=y
+# CONFIG_INIT_ON_ALLOC_DEFAULT_ON is not set
+# CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
+CONFIG_CC_HAS_ZERO_CALL_USED_REGS=y
+# CONFIG_ZERO_CALL_USED_REGS is not set
+# end of Memory initialization
+
 CONFIG_STACK_GUARD_PAGE=y
 CONFIG_STACKPROTECTOR_NONE=y
 # CONFIG_STACKPROTECTOR_STRONG is not set
@@ -999,6 +1062,9 @@ CONFIG_DIGEST_SHA1_GENERIC=y
 # CONFIG_DIGEST_HMAC_GENERIC is not set
 # CONFIG_DIGEST_SHA1_ARM is not set
 # CONFIG_DIGEST_SHA256_ARM is not set
+# CONFIG_CRYPTO_RSA is not set
+# CONFIG_CRYPTO_ECDSA is not set
+# CONFIG_CRYPTO_BUILTIN_KEYS is not set
 # CONFIG_CRYPTO_KEYSTORE is not set
 # end of Crypto support
 
