v8a: Add support for tq-ma93xxca
A new board, with an IMX93 processor.

- Barebox patch has been send upstream and accecpted into next
- magic number ist chosen at random
- has been tested on real hardware

Signed-off-by: Fabian Pflug <f.pflug@pengutronix.de>
Acked-by: Ahmad Fatoum <a.fatoum@pengutronix.de>

--- a/configs/platform-v8a/barebox.config
+++ b/configs/platform-v8a/barebox.config
@@ -48,6 +48,8 @@ CONFIG_ARCH_IMX8MM=y
 CONFIG_ARCH_IMX8MN=y
 CONFIG_ARCH_IMX8MP=y
 CONFIG_ARCH_IMX8MQ=y
+CONFIG_ARCH_IMX9=y
+CONFIG_ARCH_IMX93=y
 
 #
 # i.MX8M boards
@@ -72,7 +74,7 @@ CONFIG_MACH_TQ_MBA8MPXL=y
 #
 # i.MX93 boards
 #
-# CONFIG_MACH_TQMA93XX is not set
+CONFIG_MACH_TQMA93XX=y
 # end of i.MX boards
 
 #
@@ -80,7 +82,10 @@ CONFIG_MACH_TQ_MBA8MPXL=y
 #
 # CONFIG_IMX_IIM is not set
 CONFIG_IMX_SAVE_BOOTROM_LOG=y
+CONFIG_HAB=y
+CONFIG_AHAB=y
 # CONFIG_HABV4 is not set
+# CONFIG_HAB_CERTS_ENV is not set
 # end of i.MX specific settings
 
 #
@@ -138,6 +143,7 @@ CONFIG_BOARD_GENERIC_DT=y
 # CONFIG_BOARD_GENERIC_FIT is not set
 # end of General architecture-dependent options
 
+CONFIG_BOARD_TQ=y
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=140201
 CONFIG_CLANG_VERSION=0
@@ -517,6 +523,7 @@ CONFIG_CMD_USB=y
 CONFIG_CMD_USBGADGET=y
 CONFIG_CMD_WD=y
 CONFIG_CMD_WD_DEFAULT_TIMOUT=0
+# CONFIG_CMD_HAB is not set
 # end of Hardware manipulation
 
 #
@@ -591,7 +598,7 @@ CONFIG_SERIAL_DEV_BUS=y
 CONFIG_DRIVER_SERIAL_IMX=y
 CONFIG_DRIVER_SERIAL_NS16550=y
 # CONFIG_DRIVER_SERIAL_CADENCE is not set
-# CONFIG_DRIVER_SERIAL_LPUART32 is not set
+CONFIG_DRIVER_SERIAL_LPUART32=y
 # CONFIG_SERIAL_SIFIVE is not set
 # end of serial drivers
 
@@ -664,7 +671,7 @@ CONFIG_SPI_MEM=y
 CONFIG_DRIVER_SPI_IMX=y
 CONFIG_DRIVER_SPI_IMX_2_3=y
 # CONFIG_DRIVER_SPI_LITEX_SPIFLASH is not set
-# CONFIG_SPI_NXP_FLEXSPI is not set
+CONFIG_SPI_NXP_FLEXSPI=y
 CONFIG_SPI_ROCKCHIP=y
 # end of SPI drivers
 
@@ -675,7 +682,7 @@ CONFIG_I2C=y
 #
 # CONFIG_I2C_GPIO is not set
 CONFIG_I2C_IMX=y
-# CONFIG_I2C_IMX_LPI2C is not set
+CONFIG_I2C_IMX_LPI2C=y
 # CONFIG_I2C_DESIGNWARE is not set
 # CONFIG_I2C_MV64XXX is not set
 CONFIG_I2C_RK3X=y
@@ -748,7 +755,7 @@ CONFIG_USB_DWC3=y
 # CONFIG_USB_DWC3_GADGET is not set
 CONFIG_USB_DWC3_DUAL_ROLE=y
 CONFIG_USB_DWC3_OF_SIMPLE=y
-# CONFIG_USB_EHCI is not set
+CONFIG_USB_EHCI=y
 CONFIG_USB_XHCI=y
 # CONFIG_USB_ULPI is not set
 CONFIG_USB_OTGDEV=y
@@ -908,7 +915,8 @@ CONFIG_GPIO_GENERIC=y
 # CONFIG_GPIO_74XX_MMIO is not set
 # CONFIG_GPIO_GENERIC_PLATFORM is not set
 CONFIG_GPIO_IMX=y
-# CONFIG_GPIO_PCA953X is not set
+CONFIG_GPIO_VF610=y
+CONFIG_GPIO_PCA953X=y
 # CONFIG_GPIO_PCF857X is not set
 # CONFIG_GPIO_PL061 is not set
 CONFIG_GPIO_ROCKCHIP=y
@@ -934,6 +942,7 @@ CONFIG_NVMEM=y
 # CONFIG_NVMEM_SNVS_LPGPR is not set
 CONFIG_IMX_OCOTP=y
 # CONFIG_IMX_OCOTP_WRITE is not set
+# CONFIG_IMX_OCOTP_ELE is not set
 # CONFIG_EEPROM_93XX46 is not set
 CONFIG_NVMEM_ROCKCHIP_OTP=y
 
@@ -1064,6 +1073,7 @@ CONFIG_IMX8M_BLK_CTRL=y
 #
 CONFIG_IMX_DRAM=y
 CONFIG_IMX8M_DRAM=y
+CONFIG_IMX9_DRAM=y
 # end of i.MX DDR controllers
 
 CONFIG_REBOOT_MODE=y
@@ -1216,6 +1226,7 @@ CONFIG_PBL_STACKPROTECTOR_NONE=y
 # Crypto support
 #
 CONFIG_CRC32=y
+CONFIG_CRC_ITU_T=y
 CONFIG_DIGEST=y
 CONFIG_HAVE_DIGEST_MD5=y
 CONFIG_HAVE_DIGEST_SHA1=y
@@ -1249,6 +1260,7 @@ CONFIG_FIRMWARE_IMX8MM_ATF=y
 CONFIG_FIRMWARE_IMX8MN_ATF=y
 CONFIG_FIRMWARE_IMX8MP_ATF=y
 CONFIG_FIRMWARE_IMX8MQ_ATF=y
+CONFIG_FIRMWARE_IMX93_ATF=y
 # end of Firmware files
 
 #
@@ -1256,6 +1268,7 @@ CONFIG_FIRMWARE_IMX8MQ_ATF=y
 #
 # CONFIG_COMPILE_HOST_TOOLS is not set
 CONFIG_ARCH_IMX_USBLOADER=y
+CONFIG_IMX9_IMAGE=y
 CONFIG_RK_IMAGE=y
 CONFIG_RK_USB_LOADER=y
 # end of Host Tools
