platforms: images: use descriptive partition-type-uuids
We now have host-genimage v18, which knows descriptive identifiers for
all of these partition type UUIDs.

Also use the more descriptive "fat32" instead of "F".

Signed-off-by: Roland Hieber <rhi@pengutronix.de>

--- a/configs/platform-v7a/config/images/beaglebone.config
+++ b/configs/platform-v7a/config/images/beaglebone.config
@@ -14,12 +14,12 @@ image @IMAGE@ {
 	partition boot {
 		image = beaglebone-boot.vfat
 		partition-type = 0xc
-		partition-type-uuid = F
+		partition-type-uuid = fat32
 		bootable = true
 	}
 	partition root-A {
 		image = root.ext2
-		partition-type-uuid = 69dad710-2ce4-4e3c-b16c-21a1d49abed3 # root-arm
+		partition-type-uuid = root-arm
 	}
 }
 /* vim: set tabstop=8 noexpandtab : */
