--- a/configs/platform-v7a/config/images/hd.config
+++ b/configs/platform-v7a/config/images/hd.config
@@ -9,6 +9,6 @@ image @IMAGE@ {
 	@BOOTLOADER_PARTITIONS@
 	partition root-A {
 		image = root.ext2
-		partition-type-uuid = 69dad710-2ce4-4e3c-b16c-21a1d49abed3 # root-arm
+		partition-type-uuid = root-arm
 	}
 }
