--- a/configs/platform-v7a/config/images/stm32mp.config
+++ b/configs/platform-v7a/config/images/stm32mp.config
@@ -20,15 +20,15 @@ image @IMAGE@ {
 	}
 
 	partition barebox-environment {
-		partition-type-uuid = "6c3737f2-07f8-45d1-ad45-15d260aab24d"
+		partition-type-uuid = barebox-env
 		size = 1M
 	}
 	partition barebox-state {
-		partition-type-uuid = "4778ed65-bf42-45fa-9c5b-287a1dc4aab1"
+		partition-type-uuid = barebox-state
 		size = 1M
 	}
 	partition root-A {
-		partition-type-uuid = 69dad710-2ce4-4e3c-b16c-21a1d49abed3 # root-arm
+		partition-type-uuid = root-arm
 		image = root.ext2
 	}
 }
