--- a/configs/platform-v8a/config/images/rock3a.config
+++ b/configs/platform-v8a/config/images/rock3a.config
@@ -23,12 +23,12 @@ image @IMAGE@ {
 	}
 	partition barebox-state {
 		size = 1M
-		partition-type-uuid = 4778ed65-bf42-45fa-9c5b-287a1dc4aab1 # barebox-state
+		partition-type-uuid = barebox-state
 		image = /dev/null
 	}
 	partition root-A {
 		image = "root.ext2"
-		partition-type-uuid = b921b045-1df0-41c3-af44-4c6f280d3fae # root-arm64
+		partition-type-uuid = root-arm64
 	}
 }
 
