--- a/configs/platform-mips/config/images/malta.config
+++ b/configs/platform-mips/config/images/malta.config
@@ -8,7 +8,7 @@ image @IMAGE@ {
 	}
 	partition root-A {
 		image = root.ext2
-		partition-type-uuid = e9434544-6e2c-47cc-bae2-12d6deafb44c # root-mips
+		partition-type-uuid = root-mips
 	}
 }
 
