--- a/configs/platform-mipsel/config/images/malta.config
+++ b/configs/platform-mipsel/config/images/malta.config
@@ -8,7 +8,7 @@ image @IMAGE@ {
 	}
 	partition root-A {
 		image = root.ext2
-		partition-type-uuid = 37c58c8a-d913-4156-a25f-48b1b64e07f0 # root-mips-le
+		partition-type-uuid = root-mips-le
 	}
 }
 
