--- a/configs/platform-v7a/config/images/rpi2.config
+++ b/configs/platform-v7a/config/images/rpi2.config
@@ -16,12 +16,12 @@ image @IMAGE@ {
 		offset = 4M
 		image = rpi2-boot.vfat
 		partition-type = 0xc
-		partition-type-uuid = F
+		partition-type-uuid = fat32
 		bootable = true
 	}
 	partition root-A {
 		image = root.ext2
-		partition-type-uuid = 69dad710-2ce4-4e3c-b16c-21a1d49abed3 # root-arm
+		partition-type-uuid = root-arm
 	}
 }
 /* vim: set tabstop=8 noexpandtab : */
