--- a/configs/platform-v8a/config/images/imx8m.config
+++ b/configs/platform-v8a/config/images/imx8m.config
@@ -20,12 +20,12 @@ image @IMAGE@ {
        partition barebox-state {
                offset = 3M
                size = 1M
-               partition-type-uuid = 4778ed65-bf42-45fa-9c5b-287a1dc4aab1 # barebox-state
+               partition-type-uuid = barebox-state
                image = /dev/null
        }
        partition root-A {
                offset = 4M
                image = "root.ext2"
-               partition-type-uuid = b921b045-1df0-41c3-af44-4c6f280d3fae
+               partition-type-uuid = root-arm64
        }
 }
