v7a: barebox: version bump 2025.03.0 -> 2025.05.0
Update the version number and the MD5 hash, and run oldconfig on all
barebox recipes. Our remaining patch was merged upstream in commit
1c9a72656f88, so the patch queue can be removed. The at91 images were
renamed in commit v2025.03.0-131-gdca0152f2943 (2025-03-20, Alexander
Shiyan: "ARM: at91: xload: Rename the sama5d2 output image names"),
adapt the genimage config accordingly.

Link: https://git.pengutronix.de/cgit/barebox/commit/?id=1c9a72656f8828a
Link: https://git.pengutronix.de/cgit/barebox/commit/?id=dca0152f2943460
Signed-off-by: Roland Hieber <rhi@pengutronix.de>

--- a/configs/platform-v7a/barebox-common.config
+++ b/configs/platform-v7a/barebox-common.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Barebox/arm 2025.03.0 Configuration
+# Barebox/arm 2025.05.0 Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARCH_LINUX_NAME="arm"
@@ -75,9 +75,9 @@ CONFIG_ARM_UNWIND=y
 CONFIG_ARM_SMCCC=y
 CONFIG_ARM_SECURE_MONITOR=y
 # CONFIG_ARM_PSCI_CLIENT is not set
+# CONFIG_ARM_BOOTM_ELF is not set
+# CONFIG_ARM_BOOTM_FIP is not set
 # end of ARM specific settings
-
-CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
 
 #
 # General architecture-dependent options
@@ -86,15 +86,21 @@ CONFIG_BOARD_GENERIC_DT=y
 # CONFIG_BOARD_GENERIC_FIT is not set
 # end of General architecture-dependent options
 
+CONFIG_ARCH_HAS_STACK_DUMP=y
+CONFIG_ARCH_HAS_DATA_ABORT_MASK=y
+CONFIG_ARCH_HAS_ZERO_PAGE=y
+CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
+CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
+CONFIG_ARCH_HAS_SJLJ=y
+CONFIG_HAS_DEBUG_LL=y
+CONFIG_HAVE_ARCH_KASAN=y
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=140201
 CONFIG_CLANG_VERSION=0
 CONFIG_GREGORIAN_CALENDER=y
 CONFIG_HAS_KALLSYMS=y
 CONFIG_HAS_MODULES=y
-CONFIG_HAS_CACHE=y
 CONFIG_HAS_DMA=y
-CONFIG_ARCH_HAS_SJLJ=y
 CONFIG_GENERIC_GPIO=y
 CONFIG_BLOCK=y
 CONFIG_BLOCK_WRITE=y
@@ -105,6 +111,7 @@ CONFIG_UIMAGE=y
 CONFIG_FITIMAGE=y
 CONFIG_LOGBUF=y
 CONFIG_STDDEV=y
+CONFIG_CDEV_ALIAS=y
 CONFIG_MENUTREE=y
 CONFIG_BOOT=y
 CONFIG_FASTBOOT_BASE=y
@@ -152,7 +159,6 @@ CONFIG_MALLOC_ALIGNMENT=8
 # CONFIG_EXPERIMENTAL is not set
 # CONFIG_MALLOC_DLMALLOC is not set
 CONFIG_MALLOC_TLSF=y
-CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
 CONFIG_KALLSYMS=y
 CONFIG_RELOCATABLE=y
 # CONFIG_PANIC_POWEROFF is not set
@@ -184,12 +190,12 @@ CONFIG_BOOTM_OFTREE=y
 CONFIG_BOOTM_UIMAGE=y
 # CONFIG_BOOTM_OFTREE_UIMAGE is not set
 # CONFIG_BOOTM_AIMAGE is not set
-# CONFIG_BOOTM_ELF is not set
 CONFIG_BOOTM_FITIMAGE=y
 # CONFIG_BOOTM_FITIMAGE_SIGNATURE is not set
 CONFIG_BOOTM_OPTIONAL_SIGNED_IMAGES=y
 CONFIG_BLSPEC=y
 CONFIG_FLEXIBLE_BOOTARGS=y
+CONFIG_ROOTWAIT_BOOTARG=y
 CONFIG_MMCBLKDEV_ROOTARG=y
 CONFIG_BAREBOX_UPDATE=y
 CONFIG_SYSTEM_PARTITIONS=y
@@ -226,6 +232,8 @@ CONFIG_STATE=y
 # CONFIG_STATE_CRYPTO is not set
 # CONFIG_STATE_BACKWARD_COMPATIBLE is not set
 CONFIG_BOOTCHOOSER=y
+CONFIG_BOOT_DEFAULTS=y
+CONFIG_BAREBOX_DT_2ND=y
 CONFIG_RESET_SOURCE=y
 # CONFIG_MACHINE_ID is not set
 # CONFIG_SYSTEMD_OF_WATCHDOG is not set
@@ -236,6 +244,7 @@ CONFIG_EXTERNAL_DTS_FRAGMENTS="${PTXDIST_PLATFORMCONFIGDIR}/dts/bootstate.dtsi"
 #
 # CONFIG_BOOTM_OPTEE is not set
 # CONFIG_PBL_OPTEE is not set
+CONFIG_FILETYPE_STRINGS=y
 # end of OP-TEE loading
 
 #
@@ -251,7 +260,6 @@ CONFIG_FASTBOOT_CMD_OEM=y
 #
 CONFIG_COMPILE_LOGLEVEL=7
 CONFIG_DEFAULT_LOGLEVEL=6
-CONFIG_HAS_DEBUG_LL=y
 # CONFIG_DEBUG_LL is not set
 # CONFIG_DEBUG_INITCALLS is not set
 # CONFIG_DEBUG_PROBES is not set
@@ -261,7 +269,6 @@ CONFIG_HAS_DEBUG_LL=y
 # CONFIG_PBL_BREAK is not set
 # CONFIG_PRINTF_FULL is not set
 # CONFIG_UBSAN is not set
-CONFIG_HAVE_ARCH_KASAN=y
 CONFIG_CC_HAS_KASAN_GENERIC=y
 # CONFIG_KASAN is not set
 # CONFIG_COMPILE_TEST is not set
@@ -304,6 +311,7 @@ CONFIG_CMD_MEMINFO=y
 CONFIG_CMD_ARM_MMUINFO=y
 CONFIG_CMD_BLKSTATS=y
 CONFIG_CMD_REGULATOR=y
+# CONFIG_CMD_VARINFO is not set
 CONFIG_CMD_VERSION=y
 CONFIG_CMD_MMC=y
 # CONFIG_CMD_MMC_EXTCSD is not set
@@ -367,6 +375,7 @@ CONFIG_CMD_DIRNAME=y
 CONFIG_CMD_FILETYPE=y
 CONFIG_CMD_LN=y
 CONFIG_CMD_LS=y
+CONFIG_CMD_TREE=y
 # CONFIG_CMD_STAT is not set
 CONFIG_CMD_MD5SUM=y
 CONFIG_CMD_MKDIR=y
@@ -377,6 +386,7 @@ CONFIG_CMD_RMDIR=y
 CONFIG_CMD_SHA1SUM=y
 # CONFIG_CMD_SHA224SUM is not set
 # CONFIG_CMD_SHA256SUM is not set
+# CONFIG_CMD_BASE64 is not set
 # CONFIG_CMD_SHA384SUM is not set
 # CONFIG_CMD_SHA512SUM is not set
 # CONFIG_CMD_FIPTOOL is not set
@@ -405,6 +415,7 @@ CONFIG_NET_CMD_IFUP=y
 CONFIG_CMD_MIITOOL=y
 CONFIG_CMD_PING=y
 CONFIG_CMD_TFTP=y
+# CONFIG_CMD_IP is not set
 CONFIG_CMD_IP_ROUTE_GET=y
 # CONFIG_CMD_ETHLOG is not set
 # end of Network
@@ -444,6 +455,7 @@ CONFIG_CMD_MW=y
 #
 CONFIG_CMD_CLK=y
 CONFIG_CMD_DETECT=y
+# CONFIG_CMD_TRUNCATE is not set
 CONFIG_CMD_SYNC=y
 CONFIG_CMD_FLASH=y
 CONFIG_CMD_GPIO=y
@@ -488,7 +500,6 @@ CONFIG_CMD_STATE=y
 # end of Commands
 
 CONFIG_NET=y
-CONFIG_NET_NFS=y
 # CONFIG_NET_NETCONSOLE is not set
 CONFIG_NET_RESOLV=y
 CONFIG_NET_IFUP=y
@@ -690,6 +701,7 @@ CONFIG_MCI_WRITE=y
 CONFIG_MCI_ERASE=y
 # CONFIG_MCI_MMC_BOOT_PARTITIONS is not set
 # CONFIG_MCI_MMC_GPP_PARTITIONS is not set
+# CONFIG_MCI_MMC_RPMB is not set
 
 #
 # --- MCI host drivers ---
@@ -751,7 +763,7 @@ CONFIG_CLOCKSOURCE_ARM_ARCHITECTED_TIMER=y
 CONFIG_STATE_DRV=y
 CONFIG_DEV_MEM=y
 # CONFIG_UBOOTVAR is not set
-# CONFIG_STORAGE_BY_UUID is not set
+# CONFIG_STORAGE_BY_ALIAS is not set
 # end of Misc devices
 
 CONFIG_LED=y
@@ -1005,9 +1017,6 @@ CONFIG_LIBFDT=y
 CONFIG_PRINTF_UUID=y
 CONFIG_NLS=y
 # CONFIG_BLOBGEN is not set
-CONFIG_ARCH_HAS_STACK_DUMP=y
-CONFIG_ARCH_HAS_DATA_ABORT_MASK=y
-CONFIG_ARCH_HAS_ZERO_PAGE=y
 # end of Library routines
 
 #
@@ -1023,7 +1032,7 @@ CONFIG_ARCH_HAS_ZERO_PAGE=y
 #
 
 #
-# Extra care needs to be in secure booted systems.
+# Extra care needs to be taken in secure booted systems.
 #
 # CONFIG_BUG_ON_DATA_CORRUPTION is not set
 
