--- a/configs/platform-v7a/barebox-am335x-mlo.config
+++ b/configs/platform-v7a/barebox-am335x-mlo.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Barebox/arm 2025.03.0 Configuration
+# Barebox/arm 2025.05.0 Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARCH_LINUX_NAME="arm"
@@ -79,22 +79,25 @@ CONFIG_ARM_EXCEPTIONS=y
 # CONFIG_ARM_PSCI_CLIENT is not set
 # end of ARM specific settings
 
-CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
-
 #
 # General architecture-dependent options
 #
 # CONFIG_BOARD_GENERIC_DT is not set
 # end of General architecture-dependent options
 
+CONFIG_ARCH_HAS_DATA_ABORT_MASK=y
+CONFIG_ARCH_HAS_ZERO_PAGE=y
+CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
+CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
+CONFIG_ARCH_HAS_SJLJ=y
+CONFIG_HAS_DEBUG_LL=y
+CONFIG_HAVE_ARCH_KASAN=y
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=140201
 CONFIG_CLANG_VERSION=0
 CONFIG_HAS_KALLSYMS=y
 CONFIG_HAS_MODULES=y
-CONFIG_HAS_CACHE=y
 CONFIG_HAS_DMA=y
-CONFIG_ARCH_HAS_SJLJ=y
 CONFIG_GENERIC_GPIO=y
 CONFIG_BLOCK=y
 CONFIG_FILETYPE=y
@@ -121,6 +124,7 @@ CONFIG_PBL_IMAGE=y
 CONFIG_PBL_MULTI_IMAGES=y
 CONFIG_USE_COMPRESSED_DTB=y
 CONFIG_PBL_RELOCATABLE=y
+CONFIG_PBL_CLOCKSOURCE=y
 CONFIG_IMAGE_COMPRESSION=y
 # CONFIG_IMAGE_COMPRESSION_LZ4 is not set
 # CONFIG_IMAGE_COMPRESSION_LZO is not set
@@ -140,7 +144,6 @@ CONFIG_MALLOC_ALIGNMENT=8
 # CONFIG_MALLOC_DLMALLOC is not set
 CONFIG_MALLOC_TLSF=y
 # CONFIG_MALLOC_DUMMY is not set
-CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
 # CONFIG_KALLSYMS is not set
 CONFIG_RELOCATABLE=y
 # CONFIG_PANIC_POWEROFF is not set
@@ -180,11 +183,14 @@ CONFIG_DEFAULT_COMPRESSION_NONE=y
 # CONFIG_BTHREAD is not set
 # CONFIG_STATE is not set
 # CONFIG_BOOTCHOOSER is not set
+# CONFIG_BOOT_DEFAULTS is not set
+# CONFIG_BAREBOX_DT_2ND is not set
 CONFIG_EXTERNAL_DTS_FRAGMENTS=""
 
 #
 # OP-TEE loading
 #
+CONFIG_FILETYPE_STRINGS=y
 # end of OP-TEE loading
 # end of General Settings
 
@@ -193,7 +199,6 @@ CONFIG_EXTERNAL_DTS_FRAGMENTS=""
 #
 CONFIG_COMPILE_LOGLEVEL=6
 CONFIG_DEFAULT_LOGLEVEL=7
-CONFIG_HAS_DEBUG_LL=y
 # CONFIG_DEBUG_LL is not set
 CONFIG_DEBUG_OMAP_UART_PORT=1
 # CONFIG_DEBUG_INITCALLS is not set
@@ -204,7 +209,6 @@ CONFIG_DEBUG_OMAP_UART_PORT=1
 # CONFIG_PBL_BREAK is not set
 # CONFIG_PRINTF_FULL is not set
 # CONFIG_UBSAN is not set
-CONFIG_HAVE_ARCH_KASAN=y
 CONFIG_CC_HAS_KASAN_GENERIC=y
 # CONFIG_KASAN is not set
 # CONFIG_COMPILE_TEST is not set
@@ -287,6 +291,7 @@ CONFIG_MCI=y
 # CONFIG_MCI_WRITE is not set
 # CONFIG_MCI_MMC_BOOT_PARTITIONS is not set
 # CONFIG_MCI_MMC_GPP_PARTITIONS is not set
+# CONFIG_MCI_MMC_RPMB is not set
 
 #
 # --- MCI host drivers ---
@@ -299,6 +304,7 @@ CONFIG_MCI_OMAP_HSMMC=y
 # CONFIG_MCI_ARASAN is not set
 # CONFIG_MCI_AM654 is not set
 # CONFIG_MCI_SPI is not set
+CONFIG_MCI_OMAP_HSMMC_PBL=y
 # CONFIG_COMMON_CLK is not set
 
 #
@@ -326,7 +332,7 @@ CONFIG_CLOCKSOURCE_TI_DM=y
 # CONFIG_SRAM is not set
 # CONFIG_DEV_MEM is not set
 # CONFIG_UBOOTVAR is not set
-# CONFIG_STORAGE_BY_UUID is not set
+# CONFIG_STORAGE_BY_ALIAS is not set
 # end of Misc devices
 
 # CONFIG_LED is not set
@@ -546,8 +552,6 @@ CONFIG_XYMODEM=y
 # CONFIG_BOOTSTRAP is not set
 # CONFIG_NLS is not set
 # CONFIG_BLOBGEN is not set
-CONFIG_ARCH_HAS_DATA_ABORT_MASK=y
-CONFIG_ARCH_HAS_ZERO_PAGE=y
 # end of Library routines
 
 #
@@ -563,7 +567,7 @@ CONFIG_ARCH_HAS_ZERO_PAGE=y
 #
 
 #
-# Extra care needs to be in secure booted systems.
+# Extra care needs to be taken in secure booted systems.
 #
 # CONFIG_BUG_ON_DATA_CORRUPTION is not set
 
