--- a/configs/platform-v7a/barebox-at91.config
+++ b/configs/platform-v7a/barebox-at91.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Barebox/arm 2025.03.0 Configuration
+# Barebox/arm 2025.05.0 Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARCH_LINUX_NAME="arm"
@@ -47,7 +47,7 @@ CONFIG_HAVE_AT91_GENERATED_CLK=y
 CONFIG_HAVE_AT91_AUDIO_PLL=y
 CONFIG_HAVE_AT91_I2S_MUX_CLK=y
 CONFIG_HAVE_AT91_DDRAMC=y
-CONFIG_AT91_MCI_PBL=y
+CONFIG_AT91_PBL=y
 CONFIG_AT91SAM9_SMC=y
 CONFIG_HAVE_AT91SAM9_RST=y
 CONFIG_SOC_SAM_V7=y
@@ -90,9 +90,9 @@ CONFIG_ARM_EXCEPTIONS=y
 CONFIG_ARM_UNWIND=y
 # CONFIG_ARM_SEMIHOSTING is not set
 # CONFIG_ARM_PSCI_CLIENT is not set
+# CONFIG_ARM_BOOTM_ELF is not set
+# CONFIG_ARM_BOOTM_FIP is not set
 # end of ARM specific settings
-
-CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
 
 #
 # General architecture-dependent options
@@ -101,15 +101,21 @@ CONFIG_BOARD_GENERIC_DT=y
 # CONFIG_BOARD_GENERIC_FIT is not set
 # end of General architecture-dependent options
 
+CONFIG_ARCH_HAS_STACK_DUMP=y
+CONFIG_ARCH_HAS_DATA_ABORT_MASK=y
+CONFIG_ARCH_HAS_ZERO_PAGE=y
+CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
+CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
+CONFIG_ARCH_HAS_SJLJ=y
+CONFIG_HAS_DEBUG_LL=y
+CONFIG_HAVE_ARCH_KASAN=y
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=140201
 CONFIG_CLANG_VERSION=0
 CONFIG_GREGORIAN_CALENDER=y
 CONFIG_HAS_KALLSYMS=y
 CONFIG_HAS_MODULES=y
-CONFIG_HAS_CACHE=y
 CONFIG_HAS_DMA=y
-CONFIG_ARCH_HAS_SJLJ=y
 CONFIG_GENERIC_GPIO=y
 CONFIG_BLOCK=y
 CONFIG_BLOCK_WRITE=y
@@ -120,6 +126,7 @@ CONFIG_UIMAGE=y
 CONFIG_FITIMAGE=y
 CONFIG_LOGBUF=y
 CONFIG_STDDEV=y
+CONFIG_CDEV_ALIAS=y
 CONFIG_MENUTREE=y
 CONFIG_UBIFORMAT=y
 CONFIG_BOOT=y
@@ -168,7 +175,6 @@ CONFIG_MALLOC_ALIGNMENT=8
 # CONFIG_EXPERIMENTAL is not set
 # CONFIG_MALLOC_DLMALLOC is not set
 CONFIG_MALLOC_TLSF=y
-CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
 CONFIG_KALLSYMS=y
 CONFIG_RELOCATABLE=y
 # CONFIG_PANIC_POWEROFF is not set
@@ -200,12 +206,12 @@ CONFIG_BOOTM_OFTREE=y
 CONFIG_BOOTM_UIMAGE=y
 CONFIG_BOOTM_OFTREE_UIMAGE=y
 # CONFIG_BOOTM_AIMAGE is not set
-# CONFIG_BOOTM_ELF is not set
 CONFIG_BOOTM_FITIMAGE=y
 # CONFIG_BOOTM_FITIMAGE_SIGNATURE is not set
 CONFIG_BOOTM_OPTIONAL_SIGNED_IMAGES=y
 CONFIG_BLSPEC=y
 CONFIG_FLEXIBLE_BOOTARGS=y
+CONFIG_ROOTWAIT_BOOTARG=y
 CONFIG_MMCBLKDEV_ROOTARG=y
 CONFIG_BAREBOX_UPDATE=y
 CONFIG_SYSTEM_PARTITIONS=y
@@ -242,6 +248,8 @@ CONFIG_STATE=y
 # CONFIG_STATE_CRYPTO is not set
 # CONFIG_STATE_BACKWARD_COMPATIBLE is not set
 CONFIG_BOOTCHOOSER=y
+CONFIG_BOOT_DEFAULTS=y
+CONFIG_BAREBOX_DT_2ND=y
 CONFIG_RESET_SOURCE=y
 # CONFIG_MACHINE_ID is not set
 # CONFIG_SYSTEMD_OF_WATCHDOG is not set
@@ -252,6 +260,7 @@ CONFIG_EXTERNAL_DTS_FRAGMENTS="${PTXDIST_PLATFORMCONFIGDIR}/dts/bootstate.dtsi"
 #
 # CONFIG_BOOTM_OPTEE is not set
 # CONFIG_PBL_OPTEE is not set
+CONFIG_FILETYPE_STRINGS=y
 # end of OP-TEE loading
 
 #
@@ -267,7 +276,6 @@ CONFIG_FASTBOOT_CMD_OEM=y
 #
 CONFIG_COMPILE_LOGLEVEL=6
 CONFIG_DEFAULT_LOGLEVEL=7
-CONFIG_HAS_DEBUG_LL=y
 # CONFIG_DEBUG_LL is not set
 CONFIG_DEBUG_AT91_UART_BASE=0xfc069000
 # CONFIG_DEBUG_INITCALLS is not set
@@ -279,7 +287,6 @@ CONFIG_DEBUG_AT91_UART_BASE=0xfc069000
 # CONFIG_PBL_BREAK is not set
 # CONFIG_PRINTF_FULL is not set
 # CONFIG_UBSAN is not set
-CONFIG_HAVE_ARCH_KASAN=y
 CONFIG_CC_HAS_KASAN_GENERIC=y
 # CONFIG_KASAN is not set
 # CONFIG_COMPILE_TEST is not set
@@ -324,6 +331,7 @@ CONFIG_CMD_ARM_MMUINFO=y
 CONFIG_CMD_BLKSTATS=y
 CONFIG_CMD_REGULATOR=y
 # CONFIG_CMD_NVMEM is not set
+# CONFIG_CMD_VARINFO is not set
 CONFIG_CMD_VERSION=y
 # CONFIG_CMD_MMC is not set
 # CONFIG_CMD_MMC_EXTCSD is not set
@@ -390,6 +398,7 @@ CONFIG_CMD_DIRNAME=y
 CONFIG_CMD_FILETYPE=y
 CONFIG_CMD_LN=y
 CONFIG_CMD_LS=y
+CONFIG_CMD_TREE=y
 # CONFIG_CMD_STAT is not set
 CONFIG_CMD_MD5SUM=y
 CONFIG_CMD_MKDIR=y
@@ -400,6 +409,7 @@ CONFIG_CMD_RMDIR=y
 CONFIG_CMD_SHA1SUM=y
 # CONFIG_CMD_SHA224SUM is not set
 # CONFIG_CMD_SHA256SUM is not set
+# CONFIG_CMD_BASE64 is not set
 # CONFIG_CMD_SHA384SUM is not set
 # CONFIG_CMD_SHA512SUM is not set
 # CONFIG_CMD_FIPTOOL is not set
@@ -428,6 +438,7 @@ CONFIG_NET_CMD_IFUP=y
 CONFIG_CMD_MIITOOL=y
 CONFIG_CMD_PING=y
 CONFIG_CMD_TFTP=y
+# CONFIG_CMD_IP is not set
 CONFIG_CMD_IP_ROUTE_GET=y
 # CONFIG_CMD_ETHLOG is not set
 # end of Network
@@ -467,6 +478,7 @@ CONFIG_CMD_MW=y
 #
 CONFIG_CMD_CLK=y
 CONFIG_CMD_DETECT=y
+# CONFIG_CMD_TRUNCATE is not set
 CONFIG_CMD_SYNC=y
 CONFIG_CMD_FLASH=y
 CONFIG_CMD_GPIO=y
@@ -512,7 +524,6 @@ CONFIG_CMD_STATE=y
 # end of Commands
 
 CONFIG_NET=y
-CONFIG_NET_NFS=y
 # CONFIG_NET_NETCONSOLE is not set
 CONFIG_NET_RESOLV=y
 CONFIG_NET_IFUP=y
@@ -728,6 +739,7 @@ CONFIG_MCI_WRITE=y
 CONFIG_MCI_ERASE=y
 CONFIG_MCI_MMC_BOOT_PARTITIONS=y
 # CONFIG_MCI_MMC_GPP_PARTITIONS is not set
+# CONFIG_MCI_MMC_RPMB is not set
 
 #
 # --- MCI host drivers ---
@@ -791,7 +803,7 @@ CONFIG_SRAM=y
 CONFIG_STATE_DRV=y
 CONFIG_DEV_MEM=y
 # CONFIG_UBOOTVAR is not set
-# CONFIG_STORAGE_BY_UUID is not set
+# CONFIG_STORAGE_BY_ALIAS is not set
 # end of Misc devices
 
 CONFIG_LED=y
@@ -1048,9 +1060,6 @@ CONFIG_LIBFDT=y
 CONFIG_PRINTF_UUID=y
 CONFIG_NLS=y
 # CONFIG_BLOBGEN is not set
-CONFIG_ARCH_HAS_STACK_DUMP=y
-CONFIG_ARCH_HAS_DATA_ABORT_MASK=y
-CONFIG_ARCH_HAS_ZERO_PAGE=y
 CONFIG_GENERIC_ALLOCATOR=y
 # end of Library routines
 
@@ -1067,7 +1076,7 @@ CONFIG_GENERIC_ALLOCATOR=y
 #
 
 #
-# Extra care needs to be in secure booted systems.
+# Extra care needs to be taken in secure booted systems.
 #
 # CONFIG_BUG_ON_DATA_CORRUPTION is not set
 
