v7a: image-stm32mp*: use new partition-table-type option
'partition-table' is deprecated since genimage v15, and produces a
warning.

Signed-off-by: Roland Hieber <rhi@pengutronix.de>

--- a/configs/platform-v7a/config/images/stm32mp.config
+++ b/configs/platform-v7a/config/images/stm32mp.config
@@ -35,7 +35,7 @@ image @IMAGE@ {
 
 image @STM32MP_BOARD@@SCMI@-emmcboot.img {
 	hdimage {
-		partition-table = false
+		partition-table-type = none
 	}
 
 	partition fsbl {
