--- a/configs/platform-v7a/config/images/stm32mp-optee.config
+++ b/configs/platform-v7a/config/images/stm32mp-optee.config
@@ -35,7 +35,7 @@ image @IMAGE@ {
 
 image @STM32MP_BOARD@-emmcboot.img {
 	hdimage {
-		partition-table = false
+		partition-table-type = none
 	}
 
 	partition fsbl {
