v7a: stm32mp: switch to upstream barebox recipe
Remove the separate barebox-stm32 recipe in favour of the barebox recipe
from upstream PTXdist, which already supports multi-arch build. Merge
the kconfig options from the config diff. Let the barebox recipe install
its DTBs into the image folder (via BAREBOX_INSTALL_DTBS), which are
later picked up by genimage (however, the upstream recipe uses a
different naming scheme). The old defaultenv is already the same as in
the upstream recipe, so we don't need to port anything.

Since the barebox image is now too large to fit into the FIP partition,
enlarge the partition. (Incidentally, genimage v18 has a bug that does
not check whether the FIP image will fit into the partition, but this
will be fixed in a future release.)

Link: https://github.com/pengutronix/genimage/pull/293
Signed-off-by: Roland Hieber <rhi@pengutronix.de>

--- a/configs/platform-v7a/barebox.config
+++ b/configs/platform-v7a/barebox.config
@@ -12,6 +12,7 @@ CONFIG_ARM_LINUX=y
 #
 # System Type
 #
+CONFIG_ARCH_STM32=y
 CONFIG_ARCH_OMAP=y
 CONFIG_ARCH_MULTIARCH=y
 # CONFIG_ARCH_AT91 is not set
@@ -29,7 +30,7 @@ CONFIG_ARCH_MULTIARCH=y
 # CONFIG_ARCH_LAYERSCAPE is not set
 CONFIG_ARCH_OMAP_MULTI=y
 # CONFIG_ARCH_ROCKCHIP is not set
-# CONFIG_ARCH_STM32MP is not set
+CONFIG_ARCH_STM32MP=y
 # CONFIG_ARCH_VERSATILE is not set
 # CONFIG_ARCH_VEXPRESS is not set
 
@@ -65,6 +66,19 @@ CONFIG_MACH_BEAGLEBONE=y
 # CONFIG_MACH_WAGO_PFC_AM35XX is not set
 # end of OMAP Features
 
+CONFIG_ARCH_NR_GPIO=416
+CONFIG_ARCH_STM32MP13=y
+CONFIG_ARCH_STM32MP157=y
+CONFIG_MACH_STM32MP13XX_DK=y
+CONFIG_MACH_STM32MP15XX_DKX=y
+CONFIG_MACH_LXA_MC1=y
+# CONFIG_MACH_LXA_TAC is not set
+# CONFIG_MACH_LXA_FAIRYTUX2 is not set
+# CONFIG_MACH_SEEED_ODYSSEY is not set
+CONFIG_MACH_STM32MP15X_EV1=y
+# CONFIG_MACH_PROTONIC_STM32MP1 is not set
+# CONFIG_MACH_PROTONIC_STM32MP13 is not set
+# CONFIG_MACH_PHYTEC_PHYCORE_STM32MP1 is not set
 CONFIG_BOARD_ARM_GENERIC_DT=y
 CONFIG_AEABI=y
 CONFIG_THUMB2_BAREBOX=y
@@ -82,7 +96,9 @@ CONFIG_ARM_OPTIMZED_STRING_FUNCTIONS=y
 CONFIG_ARM_EXCEPTIONS=y
 CONFIG_ARM_UNWIND=y
 # CONFIG_ARM_SEMIHOSTING is not set
-# CONFIG_ARM_PSCI_CLIENT is not set
+CONFIG_ARM_SMCCC=y
+CONFIG_ARM_PSCI_OF=y
+CONFIG_ARM_PSCI_CLIENT=y
 # CONFIG_ARM_BOOTM_ELF is not set
 # CONFIG_ARM_BOOTM_FIP is not set
 # end of ARM specific settings
@@ -217,7 +233,7 @@ CONFIG_CONSOLE_FULL=y
 CONFIG_CONSOLE_ACTIVATE_NONE=y
 CONFIG_CONSOLE_ALLOW_COLOR=y
 # CONFIG_CONSOLE_DISABLE_INPUT is not set
-# CONFIG_PBL_CONSOLE is not set
+CONFIG_PBL_CONSOLE=y
 # CONFIG_CONSOLE_RATP is not set
 CONFIG_PARTITION=y
 CONFIG_PARTITION_MANIPULATION=y
@@ -243,13 +259,16 @@ CONFIG_BOOTCHOOSER=y
 CONFIG_BOOT_DEFAULTS=y
 CONFIG_BAREBOX_DT_2ND=y
 CONFIG_RESET_SOURCE=y
-# CONFIG_MACHINE_ID is not set
+CONFIG_MACHINE_ID=y
 # CONFIG_SYSTEMD_OF_WATCHDOG is not set
 CONFIG_EXTERNAL_DTS_FRAGMENTS="${PTXDIST_PLATFORMCONFIGDIR}/dts/bootstate.dtsi"
 
 #
 # OP-TEE loading
 #
+CONFIG_HAVE_OPTEE=y
+CONFIG_OPTEE_SIZE=0x03000000
+CONFIG_OPTEE_SHM_SIZE=0x400000
 # CONFIG_BOOTM_OPTEE is not set
 CONFIG_FILETYPE_STRINGS=y
 # end of OP-TEE loading
@@ -270,6 +289,7 @@ CONFIG_DEFAULT_LOGLEVEL=6
 # CONFIG_DEBUG_LL is not set
 CONFIG_DEBUG_OMAP_UART_PORT=1
 # CONFIG_DEBUG_INITCALLS is not set
+# CONFIG_DEBUG_PBL is not set
 # CONFIG_DEBUG_PROBES is not set
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_DEBUG_LIST is not set
@@ -323,7 +343,7 @@ CONFIG_CMD_REGULATOR=y
 # CONFIG_CMD_VARINFO is not set
 CONFIG_CMD_VERSION=y
 CONFIG_CMD_MMC=y
-# CONFIG_CMD_MMC_EXTCSD is not set
+CONFIG_CMD_MMC_EXTCSD=y
 # CONFIG_CMD_POLLER is not set
 CONFIG_CMD_BTHREAD=y
 # CONFIG_CMD_SLICE is not set
@@ -438,7 +458,7 @@ CONFIG_CMD_ECHO_E=y
 CONFIG_CMD_EDIT=y
 # CONFIG_CMD_LOGIN is not set
 CONFIG_CMD_MENU=y
-# CONFIG_CMD_MENU_MANAGEMENT is not set
+CONFIG_CMD_MENU_MANAGEMENT=y
 CONFIG_CMD_MENUTREE=y
 CONFIG_CMD_READLINE=y
 CONFIG_CMD_TIMEOUT=y
@@ -462,17 +482,20 @@ CONFIG_CMD_MW=y
 #
 # Hardware manipulation
 #
+CONFIG_CMD_CLK=y
 CONFIG_CMD_DETECT=y
 # CONFIG_CMD_TRUNCATE is not set
 CONFIG_CMD_SYNC=y
 CONFIG_CMD_FLASH=y
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_I2C=y
+# CONFIG_CMD_PWM is not set
 CONFIG_CMD_LED=y
 CONFIG_CMD_NAND=y
 # CONFIG_CMD_NANDTEST is not set
 # CONFIG_CMD_NAND_BITFLIP is not set
-# CONFIG_CMD_POWEROFF is not set
+CONFIG_CMD_POWEROFF=y
+# CONFIG_CMD_SMC is not set
 CONFIG_CMD_SPI=y
 CONFIG_CMD_LED_TRIGGER=y
 CONFIG_CMD_USB=y
@@ -507,11 +530,13 @@ CONFIG_CMD_STATE=y
 # CONFIG_CMD_DHRYSTONE is not set
 # CONFIG_CMD_SPD_DECODE is not set
 # CONFIG_CMD_SEED is not set
+# CONFIG_CMD_STACKSMASH is not set
 # end of Miscellaneous
 # end of Commands
 
 CONFIG_NET=y
-# CONFIG_NET_NETCONSOLE is not set
+CONFIG_NET_ETHADDR_FROM_MACHINE_ID=y
+CONFIG_NET_NETCONSOLE=y
 CONFIG_NET_RESOLV=y
 CONFIG_NET_IFUP=y
 CONFIG_NET_DHCP=y
@@ -521,12 +546,15 @@ CONFIG_NET_FASTBOOT=y
 #
 # Drivers
 #
+CONFIG_REGMAP_FORMATTED=y
+CONFIG_REGMAP_I2C=y
 CONFIG_OFTREE=y
 CONFIG_OFTREE_MEM_GENERIC=y
 CONFIG_DTC=y
 CONFIG_OF=y
 CONFIG_OFDEVICE=y
 CONFIG_OF_GPIO=y
+CONFIG_OF_GPIO_PINCONF=y
 CONFIG_OF_BAREBOX_DRIVERS=y
 # CONFIG_OF_BAREBOX_ENV_IN_FS is not set
 CONFIG_OF_OVERLAY=y
@@ -540,6 +568,7 @@ CONFIG_ARM_AMBA=y
 # CONFIG_SERIAL_DEV_BUS is not set
 # CONFIG_DRIVER_SERIAL_ARM_DCC is not set
 # CONFIG_SERIAL_AMBA_PL011 is not set
+CONFIG_DRIVER_SERIAL_STM32=y
 CONFIG_DRIVER_SERIAL_NS16550=y
 # CONFIG_DRIVER_SERIAL_NS16550_OMAP_TTYS is not set
 # CONFIG_DRIVER_SERIAL_CADENCE is not set
@@ -556,6 +585,8 @@ CONFIG_PHYLIB=y
 CONFIG_DRIVER_NET_CPSW=y
 CONFIG_DRIVER_NET_TI_DAVINCI_MDIO=y
 # CONFIG_DRIVER_NET_DESIGNWARE_GENERIC is not set
+CONFIG_DRIVER_NET_DESIGNWARE_EQOS=y
+CONFIG_DRIVER_NET_DESIGNWARE_STM32=y
 # CONFIG_DRIVER_NET_ENC28J60 is not set
 # CONFIG_DRIVER_NET_FSL_FMAN is not set
 # CONFIG_DRIVER_NET_KS8851_MLL is not set
@@ -572,14 +603,14 @@ CONFIG_DRIVER_NET_TI_DAVINCI_MDIO=y
 # MII PHY device drivers
 #
 # CONFIG_AR8327N_PHY is not set
-# CONFIG_AT803X_PHY is not set
+CONFIG_AT803X_PHY=y
 # CONFIG_DAVICOM_PHY is not set
 # CONFIG_DP83867_PHY is not set
 # CONFIG_DP83TD510_PHY is not set
 # CONFIG_DP83TG720_PHY is not set
 # CONFIG_LXT_PHY is not set
 # CONFIG_MARVELL_PHY is not set
-# CONFIG_MICREL_PHY is not set
+CONFIG_MICREL_PHY=y
 # CONFIG_MOTORCOMM_PHY is not set
 # CONFIG_NATIONAL_PHY is not set
 # CONFIG_REALTEK_PHY is not set
@@ -610,6 +641,8 @@ CONFIG_SPI_MEM=y
 CONFIG_DRIVER_SPI_GPIO=y
 # CONFIG_DRIVER_SPI_LITEX_SPIFLASH is not set
 CONFIG_DRIVER_SPI_OMAP3=y
+# CONFIG_STM32_QSPI is not set
+# CONFIG_DRIVER_SPI_STM32 is not set
 # end of SPI drivers
 
 CONFIG_I2C=y
@@ -620,7 +653,9 @@ CONFIG_I2C_ALGOBIT=y
 #
 CONFIG_I2C_GPIO=y
 # CONFIG_I2C_DESIGNWARE is not set
+# CONFIG_I2C_MV64XXX is not set
 CONFIG_I2C_OMAP=y
+CONFIG_I2C_STM32=y
 # end of I2C Hardware Bus support
 
 # CONFIG_I2C_MUX is not set
@@ -661,6 +696,7 @@ CONFIG_NAND_ECC_HW_SYNDROME=y
 #
 CONFIG_NAND_OMAP_GPMC=y
 # CONFIG_MTD_NAND_OMAP_ELM is not set
+# CONFIG_NAND_STM32 is not set
 # CONFIG_MTD_NAND_ECC_SW_HAMMING_SMC is not set
 # CONFIG_MTD_NAND_DENALI is not set
 
@@ -693,8 +729,9 @@ CONFIG_DISK_WRITE=y
 # CONFIG_DISK_INTF_PLATFORM_IDE is not set
 CONFIG_USB=y
 CONFIG_USB_HOST=y
-# CONFIG_USB_DWC2_HOST is not set
-# CONFIG_USB_DWC2_GADGET is not set
+CONFIG_USB_DWC2=y
+CONFIG_USB_DWC2_HOST=y
+CONFIG_USB_DWC2_GADGET=y
 # CONFIG_USB_DWC3 is not set
 CONFIG_USB_EHCI=y
 # CONFIG_USB_XHCI is not set
@@ -735,7 +772,7 @@ CONFIG_MCI_STARTUP=y
 CONFIG_MCI_INFO=y
 CONFIG_MCI_WRITE=y
 CONFIG_MCI_ERASE=y
-# CONFIG_MCI_MMC_BOOT_PARTITIONS is not set
+CONFIG_MCI_MMC_BOOT_PARTITIONS=y
 # CONFIG_MCI_MMC_GPP_PARTITIONS is not set
 # CONFIG_MCI_MMC_RPMB is not set
 
@@ -751,8 +788,16 @@ CONFIG_MCI_OMAP_HSMMC=y
 # CONFIG_MCI_ARASAN is not set
 # CONFIG_MCI_AM654 is not set
 # CONFIG_MCI_SPI is not set
+CONFIG_MCI_STM32_SDMMC2=y
 CONFIG_MCI_OMAP_HSMMC_PBL=y
-# CONFIG_COMMON_CLK is not set
+CONFIG_HAVE_CLK=y
+CONFIG_CLKDEV_LOOKUP=y
+CONFIG_COMMON_CLK=y
+CONFIG_COMMON_CLK_OF_PROVIDER=y
+CONFIG_COMMON_CLK_STM32MP135=y
+CONFIG_COMMON_CLK_STM32MP157=y
+CONFIG_COMMON_CLK_SCMI=y
+CONFIG_COMMON_CLK_GPIO=y
 
 #
 # Clocksource
@@ -761,6 +806,7 @@ CONFIG_CLOCKSOURCE_DUMMY_RATE=1000
 CONFIG_CLOCKSOURCE_ARM_ARCHITECTED_TIMER=y
 # CONFIG_CLOCKSOURCE_DW_APB_TIMER is not set
 CONFIG_CLOCKSOURCE_TI_DM=y
+# CONFIG_CLKSRC_STM32 is not set
 # end of Clocksource
 
 #
@@ -774,13 +820,14 @@ CONFIG_CLOCKSOURCE_TI_DM=y
 # CONFIG_MFD_MC34704 is not set
 # CONFIG_MFD_MC9SDZ60 is not set
 # CONFIG_MFD_STMPE is not set
-# CONFIG_MFD_SYSCON is not set
+CONFIG_MFD_SYSCON=y
 # CONFIG_MFD_TPS65219 is not set
 # CONFIG_MFD_TWL4030 is not set
 # CONFIG_MFD_TWL6030 is not set
-# CONFIG_MFD_STPMIC1 is not set
+CONFIG_MFD_STPMIC1=y
 # CONFIG_MFD_PCA9450 is not set
 # CONFIG_MFD_RN568PMIC is not set
+CONFIG_MFD_STM32_TIMERS=y
 # CONFIG_MFD_ATMEL_FLEXCOM is not set
 # CONFIG_MFD_RK808 is not set
 # CONFIG_MFD_AXP20X_I2C is not set
@@ -800,6 +847,7 @@ CONFIG_DEV_MEM=y
 
 CONFIG_LED=y
 CONFIG_LED_GPIO=y
+CONFIG_LED_PWM=y
 CONFIG_LED_GPIO_OF=y
 # CONFIG_LED_GPIO_RGB is not set
 # CONFIG_LED_GPIO_BICOLOR is not set
@@ -824,14 +872,19 @@ CONFIG_EEPROM_AT24=y
 # end of Input device support
 
 CONFIG_WATCHDOG=y
-# CONFIG_WATCHDOG_POLLER is not set
+CONFIG_WATCHDOG_POLLER=y
 # CONFIG_WATCHDOG_DW is not set
 CONFIG_WATCHDOG_OMAP=y
+CONFIG_STM32_IWDG_WATCHDOG=y
+# CONFIG_STPMIC1_WATCHDOG is not set
 # CONFIG_GPIO_WATCHDOG is not set
 # CONFIG_CADENCE_WATCHDOG is not set
-# CONFIG_PWM is not set
+CONFIG_PWM=y
+CONFIG_PWM_STM32=y
 CONFIG_HWRNG=y
 # CONFIG_HW_RANDOM_TIMERIOMEM is not set
+CONFIG_HWRNG_STM32=y
+CONFIG_HW_RANDOM_OPTEE=y
 # CONFIG_HW_RANDOM_OMAP is not set
 
 #
@@ -846,6 +899,8 @@ CONFIG_GPIOLIB=y
 # GPIO
 #
 CONFIG_GPIO_GENERIC=y
+CONFIG_HAVE_GPIO_PINCONF=y
+CONFIG_GPIO_PINCONF=y
 # CONFIG_GPIO_74164 is not set
 # CONFIG_GPIO_74XX_MMIO is not set
 CONFIG_GPIO_GENERIC_PLATFORM=y
@@ -866,12 +921,16 @@ CONFIG_GPIO_OMAP=y
 #
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_SINGLE=y
+CONFIG_PINCTRL_STM32=y
 # end of Pin controllers
 
 CONFIG_NVMEM=y
 # CONFIG_NVMEM_RMEM is not set
 # CONFIG_NVMEM_SNVS_LPGPR is not set
 # CONFIG_EEPROM_93XX46 is not set
+CONFIG_STM32_BSEC=y
+CONFIG_STM32_BSEC_WRITE=y
+CONFIG_STM32_BSEC_OPTEE_TA=y
 
 #
 # Bus devices
@@ -883,14 +942,24 @@ CONFIG_TI_SYSC=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED=y
 # CONFIG_REGULATOR_FAN53555 is not set
+CONFIG_REGULATOR_STM32_PWR=y
+CONFIG_REGULATOR_STM32_VREFBUF=y
+CONFIG_REGULATOR_STPMIC1=y
+# CONFIG_REGULATOR_ANATOP is not set
+CONFIG_REGULATOR_ARM_SCMI=y
 
 #
 # Remoteproc drivers
 #
-# CONFIG_REMOTEPROC is not set
+CONFIG_REMOTEPROC=y
+CONFIG_STM32_REMOTEPROC=y
 # end of Remoteproc drivers
 
-# CONFIG_RESET_CONTROLLER is not set
+CONFIG_ARCH_HAS_RESET_CONTROLLER=y
+CONFIG_RESET_CONTROLLER=y
+CONFIG_RESET_SIMPLE=y
+# CONFIG_RESET_IMX7 is not set
+CONFIG_RESET_SCMI=y
 # CONFIG_RTC_CLASS is not set
 
 #
@@ -902,7 +971,13 @@ CONFIG_REGULATOR_FIXED=y
 #
 # ARM System Control and Management Interface Protocol
 #
-# CONFIG_ARM_SCMI_PROTOCOL is not set
+CONFIG_ARM_SCMI_PROTOCOL=y
+CONFIG_ARM_SCMI_HAVE_TRANSPORT=y
+CONFIG_ARM_SCMI_HAVE_SHMEM=y
+CONFIG_ARM_SCMI_HAVE_MSG=y
+CONFIG_ARM_SCMI_TRANSPORT_OPTEE=y
+CONFIG_ARM_SCMI_TRANSPORT_SMC=y
+# CONFIG_ARM_SCMI_POWER_DOMAIN is not set
 # end of ARM System Control and Management Interface Protocol
 # end of Firmware Drivers
 
@@ -912,7 +987,10 @@ CONFIG_REGULATOR_FIXED=y
 # CONFIG_FPGA is not set
 # end of FPGA Configuration Support
 
-# CONFIG_GENERIC_PHY is not set
+CONFIG_GENERIC_PHY=y
+# CONFIG_USB_NOP_XCEIV is not set
+# CONFIG_PHY_FSL_IMX8MQ_USB is not set
+CONFIG_PHY_STM32_USBPHYC=y
 
 #
 # Hardware crypto devices
@@ -922,6 +1000,7 @@ CONFIG_REGULATOR_FIXED=y
 #
 # Memory controller drivers
 #
+CONFIG_STM32_FMC2_EBI=y
 # end of Memory controller drivers
 
 #
@@ -954,14 +1033,19 @@ CONFIG_REGULATOR_FIXED=y
 #
 # end of NVME Support
 
+# CONFIG_SYSCON_REBOOT_MODE is not set
 # CONFIG_NVMEM_REBOOT_MODE is not set
 # CONFIG_POWER_RESET_SYSCON is not set
 # CONFIG_POWER_RESET_SYSCON_POWEROFF is not set
 # CONFIG_POWER_RESET_GPIO is not set
 # CONFIG_POWER_RESET_GPIO_RESTART is not set
+CONFIG_RESET_STM32=y
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_MAILBOX is not set
-# CONFIG_TEE is not set
+CONFIG_TEE=y
+CONFIG_OPTEE=y
+# CONFIG_OPTEE_AVB_PERSISTENT_VALUES is not set
+CONFIG_OF_FIXUP_OPTEE=y
 # end of Drivers
 
 #
@@ -1043,7 +1127,7 @@ CONFIG_LIBFDT=y
 # CONFIG_RATP is not set
 # CONFIG_ALLOW_PRNG_FALLBACK is not set
 # CONFIG_CRC_CCITT is not set
-# CONFIG_CRC8 is not set
+CONFIG_CRC8=y
 
 #
 # Library gui routines
@@ -1053,6 +1137,7 @@ CONFIG_LIBFDT=y
 CONFIG_PRINTF_UUID=y
 CONFIG_NLS=y
 # CONFIG_BLOBGEN is not set
+CONFIG_IDR=y
 # end of Library routines
 
 #
@@ -1088,8 +1173,9 @@ CONFIG_CC_HAS_ZERO_CALL_USED_REGS=y
 # end of Memory initialization
 
 # CONFIG_STACK_GUARD_PAGE is not set
-CONFIG_STACKPROTECTOR_NONE=y
-# CONFIG_STACKPROTECTOR_STRONG is not set
+CONFIG_STACKPROTECTOR=y
+# CONFIG_STACKPROTECTOR_NONE is not set
+CONFIG_STACKPROTECTOR_STRONG=y
 CONFIG_PBL_STACKPROTECTOR_NONE=y
 # CONFIG_PBL_STACKPROTECTOR_STRONG is not set
 # end of Hardening options
