--- a/configs/platform-v7a/config/images/stm32mp-optee.config
+++ b/configs/platform-v7a/config/images/stm32mp-optee.config
@@ -52,7 +52,7 @@ image @STM32MP_BOARD@-emmcboot.img {
 image @STM32MP_BOARD@.fip {
 	fip {
 		fw-config = "stm32mp1-@STM32MP_BOARD@-fw-config.dtb"
-		hw-config = "@STM32MP_BOARD@.dtb-bb"
+		hw-config = "barebox-@STM32MP_BOARD@.dtb"
 		nt-fw = "barebox-stm32mp-generic-bl33.img"
 		tos-fw = { "tee-header_v2.bin", "tee-pager_v2.bin", "tee-pageable_v2.bin" }
 	}
