--- a/configs/platform-v7a/config/images/stm32mp.config
+++ b/configs/platform-v7a/config/images/stm32mp.config
@@ -16,7 +16,6 @@ image @IMAGE@ {
 	}
 	partition fip {
 		image = "@STM32MP_BOARD@@SCMI@.fip"
-		size = 1M
 	}
 
 	partition barebox-environment {
@@ -52,11 +51,11 @@ image @STM32MP_BOARD@@SCMI@-emmcboot.img {
 image @STM32MP_BOARD@@SCMI@.fip {
 	fip {
 		fw-config = "stm32mp1-@STM32MP_BOARD@-fw-config.dtb"
-		hw-config = "@STM32MP_BOARD@@SCMI@.dtb-bb"
+		hw-config = "barebox-@STM32MP_BOARD@@SCMI@.dtb"
 		nt-fw = "barebox-stm32mp-generic-bl33.img"
 		tos-fw = { "stm32mp1-bl32.bin" }
 		tos-fw-config = "stm32mp1-@STM32MP_BOARD@-bl32.dtb"
 	}
-	size = 1M
+	size = 2M
 }
 /* vim: set tabstop=8 noexpandtab : */
