--- a/configs/platform-v7a/platforms/image-stm32mp157c-dk2.in
+++ b/configs/platform-v7a/platforms/image-stm32mp157c-dk2.in
@@ -5,7 +5,7 @@ config IMAGE_STM32MP157C_DK2
 	select HOST_GENIMAGE
 	select HOST_TF_A
 	select IMAGE_ROOT_EXT
-	select BAREBOX_STM32MP
+	select BAREBOX
 	select TF_A
 	prompt "Generate images/stm32mp157c-dk2.hdimg"
 	help
