v7a: stm32mp: populate default environment in barebox partition
Prevent an unnecessary info message at boot:

    envfs: no envfs (magic mismatch) - envfs never written?

Signed-off-by: Roland Hieber <rhi@pengutronix.de>

--- a/configs/platform-v7a/config/images/stm32mp-optee.config
+++ b/configs/platform-v7a/config/images/stm32mp-optee.config
@@ -21,6 +21,7 @@ image @IMAGE@ {
 
 	partition barebox-environment {
 		partition-type-uuid = barebox-env
+		image = barebox-default-environment
 		size = 1M
 	}
 	partition barebox-state {
