--- a/configs/platform-v7a/config/images/stm32mp.config
+++ b/configs/platform-v7a/config/images/stm32mp.config
@@ -20,6 +20,7 @@ image @IMAGE@ {
 
 	partition barebox-environment {
 		partition-type-uuid = barebox-env
+		image = barebox-default-environment
 		size = 1M
 	}
 	partition barebox-state {
