v7a: vexpress: switch to upstream barebox recipe
Remove the separate barebox-vexpress recipe in favour of the barebox
recipe from upstream PTXdist, which already supports multi-arch build.
Merge the kconfig options from the config diff. The old defaultenv is
already the same as in the upstream recipe, so we don't need to port
anything. However, the Vexpress platform cannot detect their bootsource,
so we have to introduce an init script that hard-codes our boot disk in
a suitably named boot script as a workaround so that the default boot
target can be successfully booted.

With the upstream barebox recipe, the barebox image is currently at
about 940 kiB, so we have to increase the partition sizes in the NOR
image. (Even if the env image is named "barebox-default-environment",
it is really an empty environment image only containing a correct
superblock and checksum, but no values, like calling "bareboxenv -z").

Signed-off-by: Roland Hieber <rhi@pengutronix.de>

--- a/configs/platform-v7a/barebox.config
+++ b/configs/platform-v7a/barebox.config
@@ -32,7 +32,7 @@ CONFIG_ARCH_OMAP_MULTI=y
 # CONFIG_ARCH_ROCKCHIP is not set
 CONFIG_ARCH_STM32MP=y
 # CONFIG_ARCH_VERSATILE is not set
-# CONFIG_ARCH_VEXPRESS is not set
+CONFIG_ARCH_VEXPRESS=y
 
 #
 # Processor Type
@@ -194,6 +194,8 @@ CONFIG_MACH_STM32MP15X_EV1=y
 # CONFIG_MACH_PROTONIC_STM32MP1 is not set
 # CONFIG_MACH_PROTONIC_STM32MP13 is not set
 # CONFIG_MACH_PHYTEC_PHYCORE_STM32MP1 is not set
+CONFIG_MACH_VEXPRESS=y
+# CONFIG_MACH_VIRT is not set
 CONFIG_BOARD_ARM_GENERIC_DT=y
 CONFIG_AEABI=y
 CONFIG_THUMB2_BAREBOX=y
@@ -692,7 +694,7 @@ CONFIG_ARM_AMBA=y
 #
 # CONFIG_SERIAL_DEV_BUS is not set
 # CONFIG_DRIVER_SERIAL_ARM_DCC is not set
-# CONFIG_SERIAL_AMBA_PL011 is not set
+CONFIG_SERIAL_AMBA_PL011=y
 CONFIG_DRIVER_SERIAL_IMX=y
 CONFIG_DRIVER_SERIAL_STM32=y
 CONFIG_DRIVER_SERIAL_NS16550=y
@@ -720,7 +722,7 @@ CONFIG_DRIVER_NET_FEC_IMX=y
 # CONFIG_DRIVER_NET_FSL_FMAN is not set
 # CONFIG_DRIVER_NET_KS8851_MLL is not set
 # CONFIG_DRIVER_NET_MICREL is not set
-# CONFIG_DRIVER_NET_SMC911X is not set
+CONFIG_DRIVER_NET_SMC911X=y
 # CONFIG_DRIVER_NET_SMC91111 is not set
 # CONFIG_DRIVER_NET_LITEETH is not set
 
@@ -796,7 +798,7 @@ CONFIG_MTD=y
 CONFIG_MTD_WRITE=y
 CONFIG_MTD_OOB_DEVICE=y
 CONFIG_MTD_RAW_DEVICE=y
-# CONFIG_MTD_CONCAT is not set
+CONFIG_MTD_CONCAT=y
 
 #
 # MTD debug options
@@ -813,7 +815,14 @@ CONFIG_MTD_M25P80=y
 # CONFIG_MTD_MTDRAM is not set
 # end of Self contained MTD devices
 
-# CONFIG_DRIVER_CFI is not set
+CONFIG_DRIVER_CFI=y
+CONFIG_DRIVER_CFI_INTEL=y
+CONFIG_DRIVER_CFI_AMD=y
+CONFIG_DRIVER_CFI_BANK_WIDTH_1=y
+CONFIG_DRIVER_CFI_BANK_WIDTH_2=y
+CONFIG_DRIVER_CFI_BANK_WIDTH_4=y
+# CONFIG_DRIVER_CFI_BANK_WIDTH_8 is not set
+# CONFIG_CFI_BUFFER_WRITE is not set
 
 #
 # NAND
@@ -965,7 +974,7 @@ CONFIG_MCI_MMC_BOOT_PARTITIONS=y
 CONFIG_MCI_IMX_ESDHC=y
 # CONFIG_MCI_IMX_ESDHC_PIO is not set
 CONFIG_MCI_OMAP_HSMMC=y
-# CONFIG_MCI_MMCI is not set
+CONFIG_MCI_MMCI=y
 # CONFIG_MCI_ARASAN is not set
 # CONFIG_MCI_AM654 is not set
 # CONFIG_MCI_SPI is not set
@@ -984,6 +993,7 @@ CONFIG_COMMON_CLK_GPIO=y
 # Clocksource
 #
 CONFIG_ARCH_HAS_IMX_GPT=y
+CONFIG_AMBA_SP804=y
 CONFIG_CLOCKSOURCE_DUMMY_RATE=1000
 CONFIG_CLOCKSOURCE_ARM_ARCHITECTED_TIMER=y
 CONFIG_CLOCKSOURCE_IMX_GPT=y
@@ -1021,7 +1031,7 @@ CONFIG_MFD_STM32_TIMERS=y
 # Misc devices
 #
 # CONFIG_JTAG is not set
-# CONFIG_SRAM is not set
+CONFIG_SRAM=y
 CONFIG_STATE_DRV=y
 CONFIG_DEV_MEM=y
 # CONFIG_UBOOTVAR is not set
