--- a/configs/platform-v7a/barebox.config
+++ b/configs/platform-v7a/barebox.config
@@ -23,7 +23,7 @@ CONFIG_ARCH_MULTIARCH=y
 # CONFIG_ARCH_SOCFPGA is not set
 # CONFIG_ARCH_TEGRA is not set
 # CONFIG_ARCH_ZYNQ is not set
-# CONFIG_ARCH_BCM283X is not set
+CONFIG_ARCH_BCM283X=y
 CONFIG_ARCH_IMX=y
 # CONFIG_ARCH_K3 is not set
 # CONFIG_ARCH_SUNXI is not set
@@ -47,6 +47,19 @@ CONFIG_CPU_32v7=y
 # CONFIG_BOOT_ENDIANNESS_SWITCH is not set
 CONFIG_ARCH_HAS_L2X0=y
 # CONFIG_CACHE_L2X0 is not set
+CONFIG_MACH_RPI_COMMON=y
+CONFIG_MACH_RPI_AARCH_32_64=y
+
+#
+# select Broadcom BCM283X boards to be built
+#
+# CONFIG_MACH_RPI is not set
+CONFIG_MACH_RPI2=y
+CONFIG_MACH_RPI3=y
+CONFIG_MACH_RPI_CM3=y
+CONFIG_MACH_RPI4=y
+# end of select Broadcom BCM283X boards to be built
+
 CONFIG_ARCH_IMX_IMXIMAGE=y
 CONFIG_RESET_IMX_SRC=y
 
@@ -214,6 +227,7 @@ CONFIG_ARM_EXCEPTIONS=y
 CONFIG_ARM_UNWIND=y
 # CONFIG_ARM_SEMIHOSTING is not set
 CONFIG_ARM_SMCCC=y
+CONFIG_ARM_SECURE_MONITOR=y
 CONFIG_ARM_PSCI_OF=y
 CONFIG_ARM_PSCI_CLIENT=y
 # CONFIG_ARM_BOOTM_ELF is not set
@@ -711,7 +725,7 @@ CONFIG_PHYLIB=y
 # Network drivers
 #
 # CONFIG_DRIVER_NET_ARC_EMAC is not set
-# CONFIG_DRIVER_NET_BCMGENET is not set
+CONFIG_DRIVER_NET_BCMGENET=y
 CONFIG_DRIVER_NET_CPSW=y
 CONFIG_DRIVER_NET_TI_DAVINCI_MDIO=y
 # CONFIG_DRIVER_NET_DESIGNWARE_GENERIC is not set
@@ -774,6 +788,7 @@ CONFIG_DRIVER_SPI_IMX=y
 CONFIG_DRIVER_SPI_IMX_2_3=y
 # CONFIG_DRIVER_SPI_LITEX_SPIFLASH is not set
 CONFIG_DRIVER_SPI_OMAP3=y
+# CONFIG_SPI_BCM2835 is not set
 # CONFIG_STM32_QSPI is not set
 # CONFIG_DRIVER_SPI_STM32 is not set
 # end of SPI drivers
@@ -785,6 +800,7 @@ CONFIG_I2C_ALGOBIT=y
 # I2C Hardware Bus support
 #
 CONFIG_I2C_GPIO=y
+CONFIG_I2C_BCM283X=y
 CONFIG_I2C_IMX=y
 # CONFIG_I2C_IMX_LPI2C is not set
 # CONFIG_I2C_DESIGNWARE is not set
@@ -927,6 +943,7 @@ CONFIG_VIDEO=y
 # CONFIG_DRIVER_VIDEO_FB_SSD1307 is not set
 CONFIG_VIDEO_VPL=y
 # CONFIG_DRIVER_VIDEO_STM32_LTDC is not set
+# CONFIG_DRIVER_VIDEO_BCM283X is not set
 # CONFIG_DRIVER_VIDEO_ROCKCHIP is not set
 CONFIG_DRIVER_VIDEO_IMX_IPUV3=y
 CONFIG_DRIVER_VIDEO_IMX_IPUV3_LVDS=y
@@ -971,6 +988,8 @@ CONFIG_MCI_MMC_BOOT_PARTITIONS=y
 # CONFIG_MCI_DW is not set
 # CONFIG_MCI_SUNXI_SMHC is not set
 # CONFIG_MCI_ROCKCHIP_DWCMSHC is not set
+CONFIG_MCI_BCM283X=y
+CONFIG_MCI_BCM283X_SDHOST=y
 CONFIG_MCI_IMX_ESDHC=y
 # CONFIG_MCI_IMX_ESDHC_PIO is not set
 CONFIG_MCI_OMAP_HSMMC=y
@@ -994,6 +1013,7 @@ CONFIG_COMMON_CLK_GPIO=y
 #
 CONFIG_ARCH_HAS_IMX_GPT=y
 CONFIG_AMBA_SP804=y
+CONFIG_CLOCKSOURCE_BCM283X=y
 CONFIG_CLOCKSOURCE_DUMMY_RATE=1000
 CONFIG_CLOCKSOURCE_ARM_ARCHITECTED_TIMER=y
 CONFIG_CLOCKSOURCE_IMX_GPT=y
@@ -1073,6 +1093,7 @@ CONFIG_WATCHDOG_POLLER=y
 CONFIG_WATCHDOG_IMX=y
 # CONFIG_WATCHDOG_IMXULP is not set
 CONFIG_WATCHDOG_OMAP=y
+CONFIG_WATCHDOG_BCM2835=y
 CONFIG_STM32_IWDG_WATCHDOG=y
 # CONFIG_STPMIC1_WATCHDOG is not set
 # CONFIG_GPIO_WATCHDOG is not set
@@ -1085,6 +1106,8 @@ CONFIG_HWRNG=y
 # CONFIG_HW_RANDOM_TIMERIOMEM is not set
 CONFIG_HWRNG_STM32=y
 CONFIG_HW_RANDOM_OPTEE=y
+# CONFIG_HW_RANDOM_BCM2835 is not set
+# CONFIG_HW_RANDOM_IPROC_RNG200 is not set
 # CONFIG_HW_RANDOM_OMAP is not set
 
 #
@@ -1110,6 +1133,7 @@ CONFIG_GPIO_OMAP=y
 # CONFIG_GPIO_PCA953X is not set
 # CONFIG_GPIO_PCF857X is not set
 # CONFIG_GPIO_PL061 is not set
+CONFIG_GPIO_RASPBERRYPI_EXP=y
 # CONFIG_GPIO_DESIGNWARE is not set
 # CONFIG_GPIO_SX150X is not set
 # CONFIG_GPIO_SIFIVE is not set
@@ -1122,6 +1146,7 @@ CONFIG_GPIO_OMAP=y
 # Pin controllers
 #
 CONFIG_PINCTRL=y
+CONFIG_PINCTRL_BCM283X=y
 CONFIG_PINCTRL_IMX_IOMUX_V3=y
 CONFIG_PINCTRL_SINGLE=y
 CONFIG_PINCTRL_STM32=y
@@ -1147,6 +1172,7 @@ CONFIG_TI_SYSC=y
 
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED=y
+CONFIG_REGULATOR_BCM283X=y
 # CONFIG_REGULATOR_FAN53555 is not set
 # CONFIG_REGULATOR_PFUZE is not set
 CONFIG_REGULATOR_STM32_PWR=y
