--- a/configs/platform-v7a/platforms/image-rpi2.in
+++ b/configs/platform-v7a/platforms/image-rpi2.in
@@ -6,7 +6,7 @@ config IMAGE_RPI2
 	select HOST_DOSFSTOOLS
 	select HOST_MTOOLS
 	select IMAGE_ROOT_EXT
-	select BAREBOX_RPI2
+	select BAREBOX
 	prompt "Generate images/rpi.hdimg"
 	help
 	  SD card image for the Raspberry Pi 2, 3 and CM3
