v7a: rpi: remove "2" from recipe names
These recipes also target RPi 3 and CM 3+, so the "2" in the recipe
names might be unnecessarily confusing. The generated image is also
already named rpi.hdimg.

Rename the documentation file accordingly.

Signed-off-by: Roland Hieber <rhi@pengutronix.de>

--- a/configs/platform-v7a/config/images/rpi.config
+++ b/configs/platform-v7a/config/images/rpi.config
@@ -1,6 +1,6 @@
-image rpi2-boot.vfat {
+image rpi-boot.vfat {
 	vfat {
-		files = { @FIRMWARE_RPI2@ }
+		files = { @FIRMWARE_RPI@ }
 		file barebox.img { image = barebox-raspberry-pi.img }
 		file bcm2711-rpi-4-b.dtb { image = barebox-bcm2711-rpi-4.dtb }
 	}
@@ -14,7 +14,7 @@ image @IMAGE@ {
 	}
 	partition boot {
 		offset = 4M
-		image = rpi2-boot.vfat
+		image = rpi-boot.vfat
 		partition-type = 0xc
 		partition-type-uuid = fat32
 		bootable = true
