v7a: barebox: enable HWRNG drivers and allow fallback to PRNG
Without an HWRNG available, barebox prints an unsightly error message
on boot:

    ERROR: no HWRNG available!

Since we don't have HWRNG drivers for all available platforms, enable
those that we have (RPi, AM33xx, and FSL CAAM for i.MX6), and for the
other platforms allow fallback to the PRNG, which will at least only
print a warning on boot on platforms without HWRNG:

    WARNING: falling back to Pseudo RNG source!

… but in this case, this is expected.

Signed-off-by: Roland Hieber <rhi@pengutronix.de>

--- a/configs/platform-v7a/barebox.config
+++ b/configs/platform-v7a/barebox.config
@@ -1106,9 +1106,9 @@ CONFIG_HWRNG=y
 # CONFIG_HW_RANDOM_TIMERIOMEM is not set
 CONFIG_HWRNG_STM32=y
 CONFIG_HW_RANDOM_OPTEE=y
-# CONFIG_HW_RANDOM_BCM2835 is not set
+CONFIG_HW_RANDOM_BCM2835=y
 # CONFIG_HW_RANDOM_IPROC_RNG200 is not set
-# CONFIG_HW_RANDOM_OMAP is not set
+CONFIG_HW_RANDOM_OMAP=y
 
 #
 # DMA support
@@ -1239,7 +1239,9 @@ CONFIG_PHY_STM32_USBPHYC=y
 #
 # Hardware crypto devices
 #
-# CONFIG_CRYPTO_DEV_FSL_CAAM is not set
+CONFIG_CRYPTO_DEV_FSL_CAAM=y
+CONFIG_CRYPTO_DEV_FSL_CAAM_RINGSIZE=9
+CONFIG_CRYPTO_DEV_FSL_CAAM_RNG=y
 # end of Hardware crypto devices
 
 #
@@ -1380,7 +1382,7 @@ CONFIG_IMAGE_SPARSE=y
 CONFIG_STMP_DEVICE=y
 CONFIG_LIBFDT=y
 # CONFIG_RATP is not set
-# CONFIG_ALLOW_PRNG_FALLBACK is not set
+CONFIG_ALLOW_PRNG_FALLBACK=y
 # CONFIG_CRC_CCITT is not set
 CONFIG_CRC8=y
 
