--- a/configs/platform-v7a/barebox.config
+++ b/configs/platform-v7a/barebox.config
@@ -68,6 +68,7 @@ CONFIG_RESET_IMX_SRC=y
 #
 CONFIG_ARCH_IMX6=y
 CONFIG_ARCH_IMX6SX=y
+CONFIG_ARCH_IMX6UL=y
 
 #
 # i.MX1 boards
@@ -133,7 +134,7 @@ CONFIG_MACH_UDOO_NEO=y
 # CONFIG_MACH_TX6X is not set
 # CONFIG_MACH_KONTRON_SAMX6I is not set
 # CONFIG_MACH_NOVENA is not set
-# CONFIG_MACH_NXP_IMX6ULL_EVK is not set
+CONFIG_MACH_NXP_IMX6ULL_EVK=y
 # CONFIG_MACH_PHYTEC_SOM_IMX6 is not set
 # CONFIG_MACH_PROTONIC_IMX6 is not set
 # CONFIG_MACH_SKOV_IMX6 is not set
@@ -782,7 +783,7 @@ CONFIG_NET_USB_SMSC95XX=y
 #
 CONFIG_SPI=y
 CONFIG_SPI_MEM=y
-# CONFIG_DRIVER_SPI_FSL_QUADSPI is not set
+CONFIG_DRIVER_SPI_FSL_QUADSPI=y
 CONFIG_DRIVER_SPI_GPIO=y
 CONFIG_DRIVER_SPI_IMX=y
 CONFIG_DRIVER_SPI_IMX_2_3=y
