--- a/configs/platform-v7a/barebox-common.config
+++ b/configs/platform-v7a/barebox-common.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Barebox/arm 2025.05.0 Configuration
+# Barebox/arm 2025.06.1 Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARCH_LINUX_NAME="arm"
@@ -674,7 +674,7 @@ CONFIG_USB_STORAGE=y
 # USB Miscellaneous drivers
 #
 # CONFIG_USB_HUB_USB251XB is not set
-# CONFIG_USB_ONBOARD_HUB is not set
+# CONFIG_USB_ONBOARD_DEV is not set
 # CONFIG_TYPEC_TUSB320 is not set
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_AUTOSTART=y
