v7a: vexpress: harmonize barebox partition layout
Since commit 5c519849029d ("v7a: vexpress: switch to upstream barebox
recipe"), we switched to the upstream barebox recipe for the vexpress
platform, which increased the size of the barebox binary to 940KiB.
However, due to the fixed partition layout in the vexpress device trees,
barebox still thinks that the environment partition starts at offset
512K, so executing a "saveenv" will overwrite the barebox image in NOR
flash, and Qemu will fail to boot on the next run.

Pick a patch from the mailing list that increases the fixed barebox
and the environment partitions in the device tree 2M each, and harmonize
our genimage setup too.

Suggested-by: Ahmad Fatoum <a.fatoum@pengutronix.de>
Signed-off-by: Roland Hieber <rhi@pengutronix.de>

--- a/configs/platform-v7a/config/images/vexpress-nor.config
+++ b/configs/platform-v7a/config/images/vexpress-nor.config
@@ -5,6 +5,8 @@ image @IMAGE@ {
 		partition-table-type = none
 		fill = true
 	}
+	/* Keep these partitions in sync with the fixed partition layout in
+	   barebox/arch/arm/dts/vexpress-v2p-ca*.dts! */
 	partition barebox {
 		image = barebox-vexpress-ca9.img
 		offset = 0
@@ -18,7 +20,7 @@ image @IMAGE@ {
 	}
 	partition barebox-state {
 		image = /dev/null
-		offset = 3M
+		offset = 4M
 		in-partition-table = false
 		size = 1M
 	}
